--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,191 +1,66 @@
 ---
-title: 美国将在经济危机后有新的腾飞
+title: 《制裁中共法》正中中共“七寸”
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1994577/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1994635/)
 
-[https://gtv.org/video/id=6205b61db0af02660af2311b](https://gtv.org/video/id=6205b61db0af02660af2311b)
+撰稿：三只松鼠
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-13.jpg)图片来自网络
+美国众议院多名资深共和党议员本周三（2月9日）由众议员丽莎‧麦克莱恩（Lisa McClain）提出的《制裁中共暴政压迫人民之官员法》（Sanctioning Tyrannical and Oppressive People within the Chinese Communist Party Act），简称《制裁中共法》（STOP CCP Act），得到了共和党研究委员会（RSC）主席众议员吉姆‧班克斯（Rep. Jim Banks）、众议院军事委员会首席共和党成员麦克‧罗杰斯（Mike Rogers）等资深议员的支持。
 
-所以这次经济危机会让美国一次新的腾飞
-Por eso EE. UU tendrá un nuevo despegue tras la crisis económica de esta vez
+《制裁中共法》锁定数千名中国共产党全国代表大会成员及其直系亲属。这可能是迄今美国国会提出的针对中共的最严厉、最强硬的制裁。法案亦规定，制裁对象不准入境美国、无法取得赴美签证，也禁止动用在美国境内的财产进行交易，在中国营运的美国公司也不能与任何被制裁的官员及其家人进行任何交易或业务。
 
-但是不要忘了
-Pero no olviden
+这项法案若通过实施，制裁对象将包括中共国家主席习近平及其家属，也预示着习神的女儿李木子有可能再也不能像之前一样随意包机出现在美国，更无可能在美国肆无忌惮地炫富。
 
-这就是美国的另外的一面, 资本市场的残忍
-Esta es la otra cara de EE. UU, la crueldad del mercado capital
+RSC主席班克斯补充说，这项提案中制裁的中共官员，是一群特别残酷迫害人权嫌犯，我们不仅是出于国家安全义务，还出于道德义务，阻止他们在我国行使他们的腐败诡计，共和党研究委员会（The Republican Study Committee）会很自豪能够带头对抗中国共产党。”
 
-它每次经济危机之后
-Luego de cada crisis económica
+罗杰斯是众议院军事委员会首席共和党成员，可能会成为这个非常强大的委员会的主席，该委员会审议每年必须通过的立法，如《国防授权法》（NDAA）。他说这个《制裁中共法》是为了要中共为迫害人权的行为负责，这项法案的制裁力度大，将对中共官员发挥真正的惩罚作用。
 
-会把所谓一些大佬们
-Eliminarán a los llamados Boss
+法案为中共提供了一条摆脱严厉制裁的“出路”，如果中共真正停止对维吾尔人、停止在香港的侵犯人权行为、停止盗窃美国知识产权、停止对台湾的侵扰，那么美国总统可以豁免中共官员最多两年免于制裁。
 
-所谓英雄们淘汰掉, 非常残忍
-Y a los héroes, es muy cruel
+不过，在两年豁免权届满之后，如果总统想要继续延长豁免权，必须经过国会的批准，此举是确保某些跟中共关系密切的美国领导层不会滥用豁免权。
 
-你现在很难想起来美国在过去二三十年所谓的
-Ahora se te hace difícil recordar en los pasados 20 a 30 años EE. UU
+其实美国采取对中共官员的制裁远不是第一次，我们可以看看近年来美国是怎么一步步对不同层级的中共官员采取制裁的。
 
-科技大佬
-Los Boss de la tecnología
+2017年12月美国对前北京公安朝阳分局局长高岩等人予以制裁。高岩因侵犯人权、导致中国活动人士曹顺利非正常死亡，随后被美财政部列入“恶人榜”，并给予制裁。
 
-你给我数几个
-Sácame la cuenta
+据报，高岩等在美国管辖范围内的金融资产资格被取消，美国人将被禁止跟他们做生意；此外，他们还被取消其领取美国签证的资格，撤销已有的美国签证。朝阳分局局长高岩被制裁，对中共中层官员震慑很大，但对中共高层则未形成实际的影响。
 
-我看看, 你能数出几个出来
-Voy a ver cuántos puedes contar
+2018年9月20日，美国正式对中共装备发展部部长李尚福（党卫军中将）予以制裁。原因是该部门与俄罗斯主要军火出口商俄罗斯国防出口公司进行了“重大交易”，而这违反了美国2017年颁布的全面制裁法案。
 
-你数不出来, 美国人都忘记
-No lo podrás contar, si hasta los mismos estadounidenses lo olvidaron
+对李尚福祭出的是金融制裁决定：1）拒绝给予中共党卫军装备发展部任何外国出口许可证，冻结其在美国控制范围内的财产和利益。2）对现任中共党卫军装备发展部部长李尚福，禁止其使用美国金融系统和进行外汇交易，冻结其在美国管辖范围内的任何财产或利益，以及禁止持有美国签证。
 
-这个国家只往前看, 从来不往后看
-Este país sólo mira hacia adelante, nunca hacia atrás
+这是美国将制裁首次上升到省部级官员。美国对李尚福的制裁标志着美国开始打破过去墨守的边界，足以震慑中共省部级及以上官员。
 
-所以在美国这个国家, 很少人说后悔这个词
-Por eso en EE. UU, pocas personas mencionan la palabra “arrepentimiento”
-在美国这个国家也很少人说
-En EE. UU muy pocas personas lo dicen
+2020年6月10日，美国国会众议院147名议员在《强化美国以及应对全球威胁》的报告中，要求全面制裁中共，报告里的用词不是用China / 中国，而用的是中国共产党，把中共视为美国最大的威胁。
 
-Unfair就是不公平
-Unfair es injusticia
+制裁将依据美国通过的《全球马格尼茨基人权问责法》，该法授权美国总统对参与严重侵犯人权和重大腐败行为的个人和实体实施制裁。这意味着对中共官员的制裁范围将大幅上升。
 
-很少人说, 不像中国人, 啥都不公平
-Pocas personas lo dicen, no como los chinos que les parece injusto cualquier cosa
+“国会应终止对中国（中共）政府官员、现役军人、中共高官及其直系亲属的签证，特别是学生签证和旅游签证。”报告中说。除了限制中共高官及家人签证，报告还提出，建议制裁中共的整个统战部官员和中共高层领导人，并点名中共中央政治局常委韩正。
 
-这国家就是胜者王侯败者寇
-En este país, el vencedor es el rey y el perdedor es el bandido
+2020年7月9日，美国国务院宣布对中共中央政治局委员、新疆党委书记陈全国，新疆前党委副书记朱海伦，新疆公安厅厅长兼党委书记王明山进行制裁，限制他们三人及家人进入美国。这是美国首次限制中共中央政治局委员的签证。
 
-你别扯淡, 都往前看
-No digas tonterías, miran hacia adelante
+2020年10月14日，美国国务院向国会提交报告，列出包括行政长官[林郑](https://www.aboluowang.com/tag/%25E6%259E%2597%25E9%2583%2591-1.html)月娥在内的10名中港官员的制裁名单。并正式警告国际金融机构，不要与他们有业务往来，否则可能受到二级制裁。
 
-这个国家是每次经济危机之后
-Este país, después de pasar por cada crisis económica
+2020年12月7日，美国财政部宣布对14位中共国全国人大常委会副委员长实施制裁，理由是“涉及取消香港立法会议员资格一事”。这14位按级别可都是中共副国级官员。
 
-财富转移完又来一波, 科技升新把老的干掉一波
-Después de la transferencia de riqueza viene otra ola, la nueva tecnología matará a la antigua
+2021年3月16日，拜登新政府上台后的首次美中高层会晤前夕，美国国务院宣布：对24名涉及侵蚀《中英联合声明》和《香港基本法》中方义务的中港官员实施金融制裁。
 
-当年我在旧金山
-Estuve en San Francisco en aquel año
+这24名官员包括：全部14名中共全国人大副委员长，中共中央统战部长尤权，全国人大常委谭耀宗，国务院港澳办副主任邓中华，中共驻港国安公署副署长李江舟、孙青野，香港警务处国家安全处处长蔡展鹏，副处长刘赐蕙，助理处长江学礼、简启恩，高级警司李桂华。
 
-我认识了咱们华人的几个所谓大佬
-Conocí a nuestros algunos llamados Boss chinos
+这一次等待通过的《制裁中共法》可谓正中中共的“七寸”。之前文贵先生的爆料也显示出，中共省部级官员的子女80%以上有海外财产，孙子辈90%以上都有海外财产。被制裁后看这些中共高官及其后代还怎么得瑟？
 
-费正清当年就是美国
-En aquel año, Fei Zhengqing en EE. UU
+美国对中共官员的制裁就是这样从一般官员逐步升级达到最高层高官，从对个别人的制裁扩大到大范围的官员制裁，也显示出目前在政治党派严重分歧的华盛顿，将中共定性为必须全力抗衡的“战略竞争对手”已成为国会两党难得一见的共识。
 
-就是知中派, 他的下边这帮人
-Era quien sabía todo de China, la gente debajo de él
+美国已经有很多人意识到中共就是全世界人类发展的最大毒瘤，此瘤不除，世界难安。
 
-我跟他们打交道
-Tenía contactos con ellos
+参考消息：
 
-我就一个最大的感受
-Tenía el mayor sentimiento
+[美提最严厉制裁案 锁定中共高官及家属](https://www.epochtimes.com/gb/22/2/10/n13567974.htm)
 
-我每次到旧金山来
-Cada vez que iba a San Francisco
+[国际制裁中共　这一次打到“七寸”](https://www.zhengjian.org/node/260007)
 
-跟这帮人接触都有一帮
-Hay una pandilla en contacto con este grupo de personas
-
-年轻人的介入, 都是小孩学生
-La intervención de los jóvenes y todos son estudiantes
-
-你再次来时候这些学生都走了
-Cuando ibas de nuevo, ya estos estudiantes se fueron
-
-都去成功了
-Todos salieron con éxito
-
-后来这些人我发现都去了哪儿
-Luego me dí cuenta a donde se fueron esta gente
-
-就是后来的Facebook, 谷歌, Youtube
-Es lo que ahora sabemos, Facebook, Google, Youtube
-
-推特
-Twitter
-
-都去发财了, 都走了
-Todos fueron a hacerse ricos
-
-然后那些老人家还在, 还在那儿呢
-Y esos viejos todavía están, ¿dónde están?
-
-还搞中美关系呢
-Todavía estaban revolviendo las relaciones chino-estadounidense
-
-后来我明白了
-Luego comprendí
-
-在美国说玩政治是最傻的, 一帮傻货
-Los que juegan con la política en EE. UU son los más tontos, un montón de tontos
-
-最笨的一帮笨蛋, 聪明人
-Son un grupo de idiotas más idiotas, gente inteligente
-
-全都搞玩政治就去搞钱去了, 所以在美国这个
-Luego de jugar a la política, se dirigen a ganar dinero, por eso en EE. UU
-
-国家你能看得出来搞政治的一帮都是傻球货
-Puedes notar los que salen a participar en la política son unos tontos
-
-都是没什么本事的人, 有本事都是
-Son aquellos que no tienen capacidad, los que son capaces
-
-搞钱搞技术, 搞哲学去了
-Ya fueron a enfocarse en el dinero, la tecnología y la filosofía
-
-所以说这次
-Por eso esta vez
-
-美国好莱坞大洗牌, 科技大洗牌
-Habrá un gran barajado en el Hollywood de EE. UU y en la tecnología
-
-经济大洗牌, 然后美国会
-Gran barajado de economía, después EE. UU
-
-让很多人包括战友当中, 绝大多数的美国人
-Hará que muchas personas incluyendo a los compañeros luchadores, la mayoría de los estadounidenses
-
-会一贫如洗
-Se empobrezcan
-
-因为你跟不上形势
-Porque no puedes seguir el ritmo de la situación
-
-你跟不上形势了就没你的了
-Si no logras seguir el ritmo de la situación, esto no será tuyo
-
-然后剩下以后就是世界的科技大腾飞
-Y lo que queda es el gran despegue tecnológica del mundo en un futuro
-
-生物科技、量子电脑、太空科技、新型材料
-Biotecnología, computadora cuántica, tecnología espacial, nuevos materiales
-
-一切都将改变
-Todo va a cambiar
-
-* * *
-
-日期：02/10/2022
-原视频标题：美国将在经济危机后有新的腾飞
-Estados Unidos tendrá un nuevo despegue tras la crisis económica
-原视频日期：02/07/2022
-原视频网址：[**https://gettr.com/post/psyunve420**](https://gettr.com/post/psyunve420)
-任务编号：KC452(3696)
-视频时间段：0:00-02:18
-西听校：洛杉矶盘古农场- 霙霙（文霙）
-翻译：洛杉矶盘古农场- 小文萱
-翻译终校：洛杉矶盘古农场- 霙霙（文霙）
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
-
+编辑：云彩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
