--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,37 +1,24 @@
 ---
-title: 郭文贵先生与UBS之诉，将让更多同胞觉醒
+title: 北约指责中共国“剥夺主权国家”选择盟友的权利
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1994412/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994475/)
 
-作者：Ruihua
-编辑：Mttfly
+编辑：七龙珠
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1181.png)北约秘书长延斯·斯托尔滕贝格在新闻发布会上。（EFE/Stephanie Lecocq）
+北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）今天警告说：在北京支持莫斯科反对北约扩大到东欧后，中共国企图“剥夺”主权国家的权利，选择加入国际联盟。斯托尔滕贝格提到了这两个大国“最近的声明”，其中，“中共国首次与俄罗斯一起呼吁北约停止接纳新成员”。他在与波兰总统安杰伊-杜达会晤后的新闻发布会上说：“这是企图剥夺主权国家做出自己选择的权利”，这一点在关键的国际文件中得到了体现。他强调，北约“尊重每个国家是否加入联盟的决定”，并说“我们的开放政策是一个历史性的成功，将自由和安全扩展到整个欧洲”。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/78.png)图片来源：www.sharjah24.ae
+他说：“我们必须尊重主权决定，而不是回到势力范围的时代，不是大国可以告诉别人什么可以做，什么不可以做。”他指的是乌克兰的情况，俄罗斯想否决乌克兰未来加入联盟的可能。2月4日，中共国家主席习近平和俄罗斯总统弗拉基米尔-普京在中共国首都冬奥会开幕前夕举行会晤后，关闭了反对西方的行列，承诺共同面对他们认为的“安全威胁”。在会议结束时，他们发表了一份公报，强调“中共国和俄罗斯反对北约进一步扩张”。
 
+此外，斯托尔滕贝格指出，美国、西班牙、丹麦和英国等盟国正在向北约提供更多的能力，以便在东部提供更多的监视和安全，这“反映了北约在那里是为了保护和捍卫，并密切关注乌克兰周围和北约边界发生的事情”。他回顾说，他们还提高了北约反应部队的准备程度，像高度戒备部队这样的要素可以在几天内部署，而像美国这样的盟国则向该反应部队投入了更多的军队（目前美国有8000人驻军）。斯托尔滕贝格说：“我们正在考虑对我们的姿态，对我们在联盟东部的存在进行更长期的调整”，他补充说：“在与北约军事指挥官密切磋商的过程中，在增加在联盟东部的存在，以加强威慑和防御。” 尽管盟国的首要目标仍然是让莫斯科缓和紧张局势，以便能够达成政治解决。杜达则呼吁北约在面对俄罗斯时保持团结，并确保所有盟国持相同立场。杜达说：“我认为北约在整个东翼的存在应该增加。”他强调：“所有希望得到这种加强的国家都应该得到这种加强。”他特别主张这些增援部队应“尽可能地多国化”。波兰总统今天还在布鲁塞尔会见了欧洲理事会主席查尔斯-米歇尔（Charles Michel）和欧盟委员会主席乌苏拉-冯德莱恩（Ursula von der Leyen），他说他与他们详细讨论了欧盟在俄罗斯最终决定进攻乌克兰的情况下对其准备的制裁。冯德莱恩在推特上说：“我们正在深入协调我们的准备工作，包括能源供应和制裁，以应对任何进一步升级。”
 
-2022年2月10日，文贵先生起诉UBS的官司在伦敦正式立案。
+素材来源：【elconfidencial.com】[La OTAN acusa a China de “negar a naciones soberanas” su derecho a elegir alianzas](https://www.elconfidencial.com/mundo/2022-02-08/otan-contra-china-amenaza-libertad-naciones-soberanas_3371493/)
 
-UBS的中文名叫瑞银集团，其在全球各大金融中心都设有办公机构，但只在瑞士的苏黎世、巴塞尔有总部。自清朝以来，直至民国破亡，中共建政，UBS一直藏匿着原本属于中国人民的大量财富。这些黑钱沾满了中国人民的鲜血。
+* * *
 
-文贵先生在直播中直言，“爆料革命在与UBS的较量中，会遭遇很多意想不到的困难，中共会给英国施加巨大的政治压力，埋下各种突发的变数，包括造假、抹黑、仇恨、甚至谋杀。他们会想尽一切办法，集全球的政治、经济、媒体之能量，将这个案子本身抹掉。”UBS像一个千年恶龙，滋养着全世界的暗黑势力，但这不能阻挡郭先生灭共的进程，即使冒着生命危险。
-
-文贵先生在七年的时间里没有放弃这个案子，顶着暗黑势力的重压，直到今天终于立案成功。他经历了多大的挑战，我们是想象不到的。他有一颗多么强大的心，可以承受这些黑暗的侵袭。在我们跟随文贵先生发起的爆料革命的过程中，我们看到了他坚定的信念，永不放弃的精神。我们所了解文贵先生面临的压力，如冰山一角。文贵先生从来不在战友面前，直播中，表露自己所遇到的压力，总是云淡风轻。正如郭先生咬破手指，引天地惊雷，创立新中国联邦。上天站在我们这一边，有信仰的人才能驾驭八面来风，挑战邪恶，临危不惧。
-
-UBS的立案是对共产党的毁灭性的打击。共产党这帮老杂毛想要与文贵先生和他的家人勾兑，被文贵先生和他的家人拒绝了。共产党要不惜一切代价，阻止这个官司的立案。因为共产党知道立案后，双方当事人要在法庭上出示文件。这时侯中共和UBS勾结的丑恶必定会暴露在世界人民面前。共产党不得不解释，无产阶级的、爹亲娘亲不如党亲的党怎么会有那么多的钱呢？在UBS的钱不是500个Million！是很大的钱，是50万亿美元，中国的老百姓你知道吗？
-
-我想所有的中国人都是不敢想的，盗国贼利用他们的公权力把中国人民的血汗钱都存在了海外，人民财富据为己有，我们的人民都蒙在鼓里。共产党不管什么样的钱都不放过。就算给杨改兰的最低生活费也要苛扣，使她和她的孩子无法生活下去。我们看到徐州8个孩子的母亲在24年里的蹂躏，这些都是血淋淋的事实。共产党压榨中国人民70年了，我们中国人再不自省的话，那就真的没救了。而这一次诉讼，必定会唤醒更多被中共洗脑的同胞！
-
-我们是新中国联邦人，要跟共产党彻底的清算，这一笔笔的血泪。所以说，消灭中共是人类正义的需要。让所有的人认清共产党的罪恶，我们要紧跟文贵先生，传播爆料革命真相，让更多的人开眼看到UBS与中共丑恶的交媾。
-
-发布：tianzhihuan
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+审核：Aries的星
+校对：阿伯塔
+发布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
