--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,32 +1,44 @@
 ---
-title: 美国国务卿安布林肯表示，俄罗斯可能在奥运会期间入侵乌克兰
+title: 拜登自曝曾因颅动脉瘤住院
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1994410/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994457/)
 
-撰稿：小湫
-![](https://assets.gnews.org/wp-content/uploads/2022/02/5D505542-3E69-4B33-A0DE-9F3A8BC30952.jpeg)图片来自网络
-美国国务卿布林肯上周五表示，俄罗斯可能在北京冬奥会期间入侵乌克兰，因此美国人应该立即离开这个东欧国家。 布林肯没有详细说明国务院呼吁所有美国公民离开乌克兰的最新安全警报背后的原因。
+翻译：Jenny Ball
 
-布林肯在澳大利亚墨尔本访问期间说，我们看到令人非常不安的俄罗斯持续升级的迹象，包括新部队抵达乌克兰边境。我们正处在随时看到俄罗斯入侵的窗口期，这包括奥运会期间，本届北京冬季奥运会定于2月20日结束。俄罗斯在乌克兰边境附近集结了超过10万军队。俄罗斯表示没有入侵的计划，但希望西方国家将乌克兰和其他前苏联解体的国家排除在北约之外。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1183.png)图片来源：republicbrief.com
 
-周五，布林肯与印度、日本和澳大利亚外长在堪培拉举行会议，会议的主要议题是乌克兰的战争威胁以及俄罗斯和中国之间加强联盟，美国、印度、日本和澳大利亚四个国家组成的四方会谈，旨在对抗中国日益增长的地区影响。在关于四方联盟的问题上，印度外交部长Jaishankar强调，四方伙伴关系是为了共同的价值观，不是针对特定的国家，印度政府是俄罗斯军事硬件的最大客户之一。当记者问及俄罗斯对乌克兰的行为是否恰当时，Jaishankar回答说，四方会谈的重点是印度-太平洋地区，而不是欧洲。
+周四，民主党人乔·拜登出席会议讨论降低处方药成本，并借此机会谈论他个人与脑动脉瘤的斗争。
 
-布林肯早些时候表示，美国与中国在印太地区的冲突并非不可避免。我们同样担心，近年来中国在国内、印太地区以及在其他地区的行动越来越频繁。布林肯此行旨在加强美国在亚洲的利益，并遏制中国在该地区日益强硬的态度。 他还将访问斐济，并在夏威夷与日本和韩国领导人讨论有关朝鲜的紧迫问题。
+他对脑瘤的承认发生在一个有趣的时间点，恰逢本周早些时候华盛顿一些共和党议员要求拜登接受认知测试，因为他们担心拜登的“精神衰退”已经“变得更加明显”，并可能阻碍他的判断。
 
-中国外交部发言人赵立坚驳斥了四方对北京在太平洋岛国日益扩大的影响力的担忧。 中国对太平洋岛国的支持是开放、透明和包容的，不针对任何第三方。我们希望所有国家都能采取实际行动，帮助太平洋岛国应对挑战，为地区和平、稳定和发展做出更多贡献。
+拜登在一些公开场合谈到他自己的医疗费经历时语无伦次，这被“转折点”成员丹尼·德·乌尔比纳（Danny De Urbina）重点强调。
 
-澳大利亚近年来遭到了贸易报复，原因是它的一些行动激怒了北京政府，这些行动包括禁止外国秘密干预国内政治，禁止中国科技巨头华为参与重大基础设施项目，并敦促对COVID-19大流行的起源进行独立调查。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1185.png)图片来源：republicbrief.com
 
-澳大利亚总理斯科特·莫里森说，在与布林肯、Jaishankar和日本外相林吉正会晤后，他对双方共同承诺反对胁迫感到放心。
+事实是，华盛顿早就知道拜登的健康问题。
 
-周五早些时候，布林肯和和日本外相林吉正举行了一次会议，他们对俄罗斯在乌克兰边境加强军事力量表示深切关注，一位不愿透露姓名的日本外务省官员说，两国领导人还对朝鲜不断升级的核武器和导弹开发方面表示严重关切。
+2020 年 10 月，福克斯新闻主持人玛丽亚·巴蒂罗莫 (Maria Bartiromo) 告诉全国观众：“我的消息来源很可靠，两个医生告诉我说，乔·拜登有两个脑动脉瘤，他需要向人们解释这一点。”
 
-参考信息：
+据当地特拉华新闻报道，自 1988 年以来，脑动脉瘤大部分都被掩盖了。
 
-[US Secretary of State Antony Blinken says Russia could invade Ukraine during Olympics](https://www.9news.com.au/world/quad-press-conference-us-secretary-of-state-antony-blinken-says-russia-could-invade-ukraine-during-olympics/7ac7ea6e-c71c-4194-a5ea-7f8cb11fcb75)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
-发稿：MG6
+保守派简报报道了 2020 年，希尔呼吁对拜登进行医学评估：
 
+“一群共和党议员再次向乔·拜登总统施压，要求他进行认知测试，因为他们认为，他的‘精神衰退’已经‘变得更加明显’，可能会阻碍他的判断。
+
+近 40 名共和党国会议员希望 79 岁的拜登效仿他的前任、前总统川普开创的先例，因为最近的民意调查越来越多地显示，越来越多的美国人不确定，拜登的心理是否适合担任这项艰巨的总统工作。
+
+周二，在前白宫医生、德克萨斯州众议员罗尼·杰克逊的带领下，其他 37 名共和党同事签署了一封致拜登的信，他们在信中表示，他们“担心”他的“当前认知状态”。
+
+“这不是党派问题。当我与川普总统讨论进行认知测试时，他急于向美国人民保证，并把假新闻媒体的故事戳穿，”杰克逊在信中写道。 “为什么拜登总统不这样做呢？”
+
+素材链接：[republicbrief.com] [Biden Reveals He Was Hospitalized For Cranial Aneurysms](http://republicbrief.com/biden-reveals-he-was-hospitalized-for-cranial-aneurysms/)
+
+* * *
+
+*审核：文乐
+校对：小东
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
