--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,54 +1,225 @@
 ---
-title: 北京冬奥会成中共献丑会
+title: 做回自己 勇气绽放
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1994544/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1994603/)
 
-撰稿：一碗兰州（文远）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-12.jpg)图片来自网络
-“献丑了”原是一种谦逊的说辞，而在这次北京冬奥会上，中共国实打实地上演了一出“以武会友”，将对待中国人民的丑陋手段的亿分之一用在了“外国友人”身上，打了洋大人们一个猝不及防，给他们上了一节生动的“以警治国”课，希望由此使得他们认清中共的流氓本质。
+做回自己 勇气绽放
+（首秀筹备会记录）
+– 蓝莲花农埸成立庆典直播 –
+– 正道圣洁 行动方舟 –
+– 灭共我们来了 –
 
-中共国向来对新闻自由十分畏惧，将国内的高压舆论管控政策用在外国媒体身上，严格控制外国媒体的报道活动，外媒稍有不慎就会遭到干扰、阻拦，甚至受到暴力威胁。
+农埸成立
+首埸筹备会议（开门）
 
-荷兰广播公司NOS记者斯乔尔德·邓·达斯（Sjoerd den Daas）在北京街头进行直播报道时，突然被一名戴着“公共安全志愿者”（Public Safety Volunteer）红色袖章的中共安保人员粗暴地推走，其摄影灯也在被阻止直播后立刻遭到拆除。上述画面被全程直播了出去，与达斯进行直播连线的荷兰电视台女主持人一脸惊恐，不知所措，NOS电视台随即将画面切回了主播间。
+美东时间：
+2022 02 11 am 7-8点
+参加战友：
+文斌 JIMHU QJTY 共必亡
+一叶知秋 文聊 小学牲
+公平 甜柠檬 维度 老师傅
+软红香土 澄道来了
+主持人：
+Wood（文斌）
+记录人：
+澄道来了
 
-美国网友评论：When it comes to foreign correspondents reporting on the Olympics, Beijing thinks “No news, is good news”. *(翻译：对于外国记者报道奥运会，北京认为“没有消息就是好消息”。)*
+文斌（农埸主）
+开埸：
+做回自己
+蓝莲花农埸成立直播
+首次筹备会议
+大家献计献策
+鼓励
+出镜直播
+寄语
+文字也可
+音频
+一段更可
+六七个人参与
+（可以组成节目小组）
 
-事后，荷兰记者达斯在推特上写道：“与此同时，另一个人拿走了我们的灯光装置。当被问到时，他们无法告诉我们做错了什么。最后我们在拐角处的停车场继续我们的电视直播。” “最近几周，我们和几位外国同事一样，在报道奥运会相关话题时，多次被警方阻挠或拦下。”
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide2-1.jpg)
-达斯推文截图
-达斯推文：“因此，很难像国际奥委会声称的那样将昨晚的事件视为孤立事件，尽管这种干扰很少在现场直播中发生。现在重新开始工作。”
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide3.jpg)
-达斯推文截图
-法国24频道记者安东尼·莫雷尔（Antoine Morel）在推特上发文表示，中共国给他们指派了一名所谓的“导游”，此人一直跟踪他们，一旦发现被采访者偏离官方话语，这名“导游”就会把他们拉走。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide4.jpg)
-安东尼·莫雷尔推文截图
-美国专题报道新闻公司（Feature Story News）的记者帕特里克·霍克（Patrick Fok）在推特上写道：“我在王府井被安保人员拦住，我出示了记者证，被告知不能采访人们关于冬奥会的感受。”
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide5.jpg)
-记者帕特里克·霍克推文截图
-除了对外国媒体记者的监控、限制，对于运动员们的抱怨，中共国也按照对待中国老百姓的办法处理——逼他们删除负面信息。
+接下来有请本次直播
+（策划之一）澄道与
+大家介绍
+一下农埸
+首秀构想！
 
-芬兰运动员的宿舍发生严重漏水事故，一些运动员将现场照片及视频上传到了Twitter和Instagram上，然后就受到中共国压力，要求他们删除相关信息。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide6-2.jpg)
-Reddit网站相关帖文![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide7-4.jpg)
-网传中共国冬奥会相关人员聊天
-控制媒体、管控舆论，是中共愚弄、统治人民的一贯手段，此次用到参加冬奥会的外国人身上也不是什么新鲜事。在2022寅虎灭共年这一重要时期，中共的愚蠢与疯狂只会让更多人认清它的邪恶，从而加速其灭亡！
+澄道来了：
+战友们好
+首先祝贺
+多伦多蓝莲花农埸成立
+并非常荣幸能有机会
+参与农埸的筹建
+且能领到农埸
+成立直播的策划
+文案文宣
 
-参考消息：
+爆料革命对於本人
+就像＂澄道来了＂
+网名喻义一样
+重新＂再活回来了＂
+开眼明智
 
-大纪元：[被尾随 被监视 多国记者谈冬奥报导境遇](https://www.epochtimes.com/gb/22/2/8/n13563606.htm)
+农埸是大家的
+成立当然也定要依靠大家
+首次筹备
+故建义大家
+先相见欢
+并之后提出建议
+每人一分鐘
+多谢
 
-推特：荷兰NOS 记者[达斯推文](https://twitter.com/sjoerddendaas/status/1489926485536391170?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1489926485536391170%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F22%2F2%2F8%2Fn13563606.htm)
+JIMHU:
+本人在大多地区
+非常幸运
+能参与到爆料革命
+已经是年过六十的人了
+充分感受到了
+现在地球上的黑暗
+爆料革命
+正义正道事业
+尽力早日灭共
+使地球人进入一个新时代
+另太太及全家
+都是战友
+且可出镜（只是电脑操作困难）
 
-推特：法国24频道记者[安东尼推文](https://twitter.com/Antwanmorel/status/1490214278837653504)
+文聊：
+原来自香草山医疗部
+从17年就紧跟七哥
+其间经歷了很多事
+但还是要感恩
+因為爆料革命
+让我成长
 
-推特：美国专题报道记者[霍克推文](https://twitter.com/PaddyFok/status/1490528612650713088?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1490528612650713088%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F22%2F2%2F8%2Fn13563606.htm)
+记得有一位
+智者提到：
+当你面对邪恶的时候
+保持沉默
+和无动於衷
+就是最大的邪恶
+故我们要站出来发声
+灭共别无选择
 
-Reddit：[Finland’s Olympic athlete dormitory in Beijing experienced a serious water leakage today. Some Finnish athletes posted this incident on Twitter and Instagram … and they were told to delete them by the Chinese authorities](https://www.reddit.com/r/China/comments/spwrtv/finlands_olympic_athlete_dormitory_in_beijing/)
+维度：
+在墻内几乎没有
+亲人与朋友了
+现在有喜币
+也算是有钱人了
+但没有选择躺平
+劝说
+亲妹妹不听
+打疫苗
+被洗脑到了极点
+我没有什麼高大尚的理想
+想法只有一条
+出国开公司
+把自己活好
+给家人们看
+并带他们回到正常人生活！
 
-推特：[灭霸小米(澳喜特战旅) ：冬奥村，芬兰选手房间水管爆了，中共第一时间找到该名选手，想要解决一下提出问题的人](https://twitter.com/V56445280/status/1492092319692394498)
+老师傅：
+我名字的由来
+成為一个老师傅
+做事才会好
 
-编辑：云彩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+爆料革命不是
+百米冲刺
+是马拉松长跑
+
+＂做回自己＂
+直播节目名称
+非常给力
+主题定的非常好
+
+农埸＂蓝莲花＂的名字
+也取得非常好
+对农埸的前途
+非常有信心
+希望更多战友加入
+我现在是游客身份
+
+软红香土：
+工签出来的
+在墻内是很孤独的
+被家人及朋友
+认定精神病
+
+7080岁的人
+还在街边卖菜
+一个正常社会的生活
+不应该是这样的！
+老公和孩子都在墻内
+一开始是同意让孩子
+出来读书的
+但后来变掛了
+脑子被彻底洗完了
+千叮嚀万嘱咐
+昨天得知两个小孩
+还是都打了疫苗
+我就把我老公拉黑了！
+
+已经没有一点
+办法和
+他们沟通了！
+
+文斌：
+推流可以是麦克及维度
+初步定：
+2月17日（周四）
+战友们的寄语及音频
+发给文斌战友
+邀请嘉宾：
+文斌战友以农埸名义发
+邀请函（另议）
+澄道：
+海报由快思慢想
+先来支援
+界面由维度
+完成
+
+甜柠檬：
+农埸的开业
+是实实在在
+（沉沉淀淀）
+一切的运行都是在高处 ？
+
+文聊：
+联盟接待
+农埸新人
+双处值班
+之前是公平负责
+联繫联盟的！
+
+文斌：
+希望文聊战友
+承担负责吧！
+
+公平：
+文聊战友以后
+可以直接
+与联盟对接
+这样效率高
+谢谢！
+
+正道之家
+行动之家
+蓝莲花农埸
+
+做回自己
+勇气绽放
+灭共我们来了
+
+2022 02 11
+
+撰稿：澄道 / 发布：一叶知秋
+
+**更多资讯，请关注：**
+[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
+[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
+[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
