--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,31 +1,19 @@
 ---
-title: 大直播后记：北京冬奥会是一出中共假恶丑的闹剧
+title: 雪松总部被围，民企500强又现暴雷声
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1994347/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1994370/)
 
-整理：GraceFang、sadhu
-编辑：小鱼儿
+**撰稿人：东南**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/A19EA1BA-AC26-467F-A30F-031B75A4F09B.jpeg)**图片来源网络**
+近日曾经是广州最大民企之一的雪松控股，总部楼下聚集了一大批维权的投资者，他们的平均投资都在百万级别。雪松控股在2020年其实就被曝光42只信托产品风控全线裸奔，220亿底层资产尽数虚无，借道假央企转移百亿巨资。2021年4月至今，雪松的理财产品大面积逾期，构成事实违约，而其产品大都是百万起投，其投资来源大多都是父母的养老钱、子女的教育基金、企业的经营周转资金。今年1月30日，也就是除夕前一天，雪松向投资者发布致歉信，称兑付无法完成，将在春节后进一步与投资人对话商议方案、取得共识，确保2月底前完成兑付。而按照此前方案，当月底应兑付2021年8月前到期产品本金的10％。雪松高管和投资者沟通时承认，对外发行的理财产品存量规模在200亿元左右，涉及投资人大约8000人，平均每人250万左右。但就在2月9日的公司会议上，雪松的理财经理们把矛头对准公司董事长、创始人张劲，要求其个人为逾期理财产品承担连带责任，遭到拒绝，陷入僵局。于是就有了围攻总部的一幕。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-4.png)图片来源：雅典娜设计组（614）
+要知道雪松信托这家可是广州唯一的世界500强民企。想到这就不由得后背发凉，这种“皮包公司”是怎么进入民企500强的？像雪松一样的信托公司中共国就这一家吗？答案是肯定的：当然不是。就近些年来P2P,私募,乃至上市公司都在频频暴雷，就CCP这样的资本市场还有什么可信任的。但那些投行的高管呢，哪个不是在暴雷前把钱早就转进到了私人腰包，个个都赚得盆满钵满。就算是公司亏没了都不要紧，因为当初的目的不就是这最后的暴雷吗！反观投资者你想他利息，他谋你本金的事层出不穷，真的是希望墙内的同胞一定要看清现在全球都在灭共的大背景下，一定要看好自己手里的钱，远离一切CCP的投资和理财产品。血本无归，欲哭无泪的懊悔不要再一出出上演了。
 
+**文章参考：**
 
-嘉宾六月的鲜花，解说PPT：史无前例的造假，奥运会从头到尾都是假。比赛场地，百分之百使用人工造雪——就那一块有雪，周围全是光秃秃的。 运动员国籍造假，很多的国籍造假。其中一个就是冰球队，男队25个里面，有19个都是归化的外籍球员；女队23个里面，13个是归化的。 男队，刚刚还0:8输给了美国。 上届的花样滑冰冠军，日本的羽生结弦在起跳的时候，卡进了冰窟窿。你说这种国际赛场的冰，居然能够有个冰窟窿！中共称，奥运史上收视率是最高的。而实际上，全美广播公司（NBC）说它是史上最低的——连以前的一半都不到。中共大规模删除，有关北京冬奥的、社交媒体的评论——据说是以万计的啊！
-
-玩弄奥运规则，中共肆意妄为。遭国际滑总，竞赛一年的裁判黄峰——以前就是以偏袒著名——这次重返奥运，而且担任花滑项目的技术总监。奥运工作人员滥用职权，把保加利亚选手的比赛工具挂在赛场大门上，而且强迫她离开，中共就是用种种卑劣手段。芬兰男子冰球前锋马尔科·安蒂拉，检测呈现阳性后18天，他仍然被隔离——就是不让他参加比赛。
-
-中共选手范可新，在女子500米短道速滑四分之一决赛中，恶意放倒加拿大选手——实际上，她是两抓着，把加拿大选手给扳倒了。 南韩选手黄大宪，在男子1000米竞速滑冰比赛中，拿下第一。但是，挡了中国队夺冠的路，就把他判犯规。 这样的话，中国队就可以出线了。连续五天，中共给运动员供应的那个餐点，网上都有很多照片，既没有营养，而且是同样的、而且分量还不够。短道速滑1000米决赛中，匈牙利选手刘少林，被中国选手任子威推倒。这种种怪象，现在都在网络上流传。
-
-奥林匹克之精神被玷污。嘉宾安平：做这个节目前，我上网认真查一下，到底什么是奥林匹克？奥林匹克宪章里面明确规定了，体育运动是一项人权。奥林匹克的核心是什么？——是不歧视。 奥林匹克的精神——是世界和平和友谊的象征。 奥林匹克最终极的目标是什么？——重建更美好的世界（Rebuilding Better World）。大家想一想,哪一个字跟北京冬奥有关。这就是中共几个独裁者，利用奥林匹克之名，榨取整个中国同胞的、万亿的血汗钱。同时，中国付出自然环境被摧毁至万年的代价。中共呢，利用奥林匹克，在为他血腥的统治，苟延残喘。甚至他真正的是，在玷污、在强奸、在蹂躏奥林匹克之精神。
-
-资料来源：[2022年2月11日 ——文贵大直播](https://gettr.com/streaming/ptvq9q8759)
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**[暴雷！雪松控股总部遭投资者维权 理财再逾期或与恒大有关？](https://finance.sina.com.cn/trust/roll/2022-02-11/doc-ikyakumy5259573.shtml)**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+发稿：MG6
 
  
 
