--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,25 +1,191 @@
 ---
-title: 中日财经爆┃“宁王”失宠
+title: 美国将在经济危机后有新的腾飞
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1994515/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1994577/)
 
-撰稿：东京樱花团/华夏伊人
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1194.png)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fx0.ifengimg.com%2Fres%2F2021%2F8F38AC2D527E94536D36FEB0AB6E689ABE840E9F_size113_w998_h614.jpeg&amp;imgrefurl=https%3A%2F%2Fwww.tiantian9527.com%2Fnews%2F23029371.html&amp;tbnid=oUuhXRUz7Dj4HM&amp;vet=12ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ..i&amp;docid=ma88AApCqfAHHM&amp;w=998&amp;h=614&amp;q=%E5%AE%81%E5%BE%B7%E6%97%B6%E4%BB%A3&amp;ved=2ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ)
-2月10日，宁德时代开盘1小时跌幅超过8%，盘中加速下跌，最大跌幅达9%，股价跌破500元整数关口，成交量超100亿，市值蒸发1000亿。春节后四个交易日已经下跌近15%，市值蒸发2000亿元，股价创去年10月以来新低。
+[https://gtv.org/video/id=6205b61db0af02660af2311b](https://gtv.org/video/id=6205b61db0af02660af2311b)
 
-2022年1月，宁德时代发布的业绩预告称，其去年净利润为140亿元——165亿元之间，同比增长150%——195%，这是宁德时代上市以来的最高利润水平。2022年各大机构更是对其盈利预期看到300亿元的净利润。
+所以这次经济危机会让美国一次新的腾飞
+Por eso EE. UU tendrá un nuevo despegue tras la crisis económica de esta vez
 
-尽管业绩增幅超预期，机构也给了很高的评价，为什么股价不涨反跌呢？现在，不仅仅是资金面对宁德时代不友好，就连消息面也开始唱衰：可能遭到美国制裁、核心客户“出逃”、新的储能解决方案出现等等。
+但是不要忘了
+Pero no olviden
 
-宁德时代在资本市场也比较受欢迎，去年三季度宁德时代还一举超过了茅台成为公募基金的头号重仓股，也是各大公募基金的“标配”。春节过后，画风突变，竟有券商突然唱空，表示“未来仍有明显下跌空间，建议逢高出货”，到底发生了什么？此前外资也是一直买买，而近10日，外资卖出金额33亿元，20日卖出金额更高达45亿元，现在开始“失宠”宁王了。
+这就是美国的另外的一面, 资本市场的残忍
+Esta es la otra cara de EE. UU, la crueldad del mercado capital
 
-也许是嗅觉敏感的资本嗅到了山雨欲来的血腥味道，楼倒屋塌时，逃跑的速度决定了生还的机率。内外夹击下，“失宠”的宁王该何去何从？但愿宁王安好。
+它每次经济危机之后
+Luego de cada crisis económica
 
-消息来源：[宁德时代大跌超5%失守500元大关，自历史高点已大跌近三成，跌到位了吗？](https://stock.stcn.com/djjd/202202/t20220211_4145588.html)
+会把所谓一些大佬们
+Eliminarán a los llamados Boss
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+所谓英雄们淘汰掉, 非常残忍
+Y a los héroes, es muy cruel
+
+你现在很难想起来美国在过去二三十年所谓的
+Ahora se te hace difícil recordar en los pasados 20 a 30 años EE. UU
+
+科技大佬
+Los Boss de la tecnología
+
+你给我数几个
+Sácame la cuenta
+
+我看看, 你能数出几个出来
+Voy a ver cuántos puedes contar
+
+你数不出来, 美国人都忘记
+No lo podrás contar, si hasta los mismos estadounidenses lo olvidaron
+
+这个国家只往前看, 从来不往后看
+Este país sólo mira hacia adelante, nunca hacia atrás
+
+所以在美国这个国家, 很少人说后悔这个词
+Por eso en EE. UU, pocas personas mencionan la palabra “arrepentimiento”
+在美国这个国家也很少人说
+En EE. UU muy pocas personas lo dicen
+
+Unfair就是不公平
+Unfair es injusticia
+
+很少人说, 不像中国人, 啥都不公平
+Pocas personas lo dicen, no como los chinos que les parece injusto cualquier cosa
+
+这国家就是胜者王侯败者寇
+En este país, el vencedor es el rey y el perdedor es el bandido
+
+你别扯淡, 都往前看
+No digas tonterías, miran hacia adelante
+
+这个国家是每次经济危机之后
+Este país, después de pasar por cada crisis económica
+
+财富转移完又来一波, 科技升新把老的干掉一波
+Después de la transferencia de riqueza viene otra ola, la nueva tecnología matará a la antigua
+
+当年我在旧金山
+Estuve en San Francisco en aquel año
+
+我认识了咱们华人的几个所谓大佬
+Conocí a nuestros algunos llamados Boss chinos
+
+费正清当年就是美国
+En aquel año, Fei Zhengqing en EE. UU
+
+就是知中派, 他的下边这帮人
+Era quien sabía todo de China, la gente debajo de él
+
+我跟他们打交道
+Tenía contactos con ellos
+
+我就一个最大的感受
+Tenía el mayor sentimiento
+
+我每次到旧金山来
+Cada vez que iba a San Francisco
+
+跟这帮人接触都有一帮
+Hay una pandilla en contacto con este grupo de personas
+
+年轻人的介入, 都是小孩学生
+La intervención de los jóvenes y todos son estudiantes
+
+你再次来时候这些学生都走了
+Cuando ibas de nuevo, ya estos estudiantes se fueron
+
+都去成功了
+Todos salieron con éxito
+
+后来这些人我发现都去了哪儿
+Luego me dí cuenta a donde se fueron esta gente
+
+就是后来的Facebook, 谷歌, Youtube
+Es lo que ahora sabemos, Facebook, Google, Youtube
+
+推特
+Twitter
+
+都去发财了, 都走了
+Todos fueron a hacerse ricos
+
+然后那些老人家还在, 还在那儿呢
+Y esos viejos todavía están, ¿dónde están?
+
+还搞中美关系呢
+Todavía estaban revolviendo las relaciones chino-estadounidense
+
+后来我明白了
+Luego comprendí
+
+在美国说玩政治是最傻的, 一帮傻货
+Los que juegan con la política en EE. UU son los más tontos, un montón de tontos
+
+最笨的一帮笨蛋, 聪明人
+Son un grupo de idiotas más idiotas, gente inteligente
+
+全都搞玩政治就去搞钱去了, 所以在美国这个
+Luego de jugar a la política, se dirigen a ganar dinero, por eso en EE. UU
+
+国家你能看得出来搞政治的一帮都是傻球货
+Puedes notar los que salen a participar en la política son unos tontos
+
+都是没什么本事的人, 有本事都是
+Son aquellos que no tienen capacidad, los que son capaces
+
+搞钱搞技术, 搞哲学去了
+Ya fueron a enfocarse en el dinero, la tecnología y la filosofía
+
+所以说这次
+Por eso esta vez
+
+美国好莱坞大洗牌, 科技大洗牌
+Habrá un gran barajado en el Hollywood de EE. UU y en la tecnología
+
+经济大洗牌, 然后美国会
+Gran barajado de economía, después EE. UU
+
+让很多人包括战友当中, 绝大多数的美国人
+Hará que muchas personas incluyendo a los compañeros luchadores, la mayoría de los estadounidenses
+
+会一贫如洗
+Se empobrezcan
+
+因为你跟不上形势
+Porque no puedes seguir el ritmo de la situación
+
+你跟不上形势了就没你的了
+Si no logras seguir el ritmo de la situación, esto no será tuyo
+
+然后剩下以后就是世界的科技大腾飞
+Y lo que queda es el gran despegue tecnológica del mundo en un futuro
+
+生物科技、量子电脑、太空科技、新型材料
+Biotecnología, computadora cuántica, tecnología espacial, nuevos materiales
+
+一切都将改变
+Todo va a cambiar
+
+* * *
+
+日期：02/10/2022
+原视频标题：美国将在经济危机后有新的腾飞
+Estados Unidos tendrá un nuevo despegue tras la crisis económica
+原视频日期：02/07/2022
+原视频网址：[**https://gettr.com/post/psyunve420**](https://gettr.com/post/psyunve420)
+任务编号：KC452(3696)
+视频时间段：0:00-02:18
+西听校：洛杉矶盘古农场- 霙霙（文霙）
+翻译：洛杉矶盘古农场- 小文萱
+翻译终校：洛杉矶盘古农场- 霙霙（文霙）
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
