--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,42 +1,62 @@
 ---
-title: 乔·罗根拒绝一亿美元薪酬：就待在Spotify
+title: 让瑞银伦敦正式立案的英国大法官，也是一位畅销书作家
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994477/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1994524/)
 
-素材翻译： Jenny Ball
+作者/编辑：文泓
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1187.png)乔·罗根（Joe Rogan）于 2021 年 7 月 9 日在内华达州拉斯维加斯的 T-Mobile 竞技场参加 UFC 264 的称重仪式。（Stacy Revere/Getty Images）
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/法官.png)图片来源：TopFoto & Twitter
 
-喜剧演员乔·罗根周二在德州告诉观众，他不会接受视频平台 Rumble 提供的 1 亿美元独家主持他的节目的报价。
 
-当罗根在 Spotify 的未来存在争议之际，Rumble的首席执行官本周在一篇广为流传的社交媒体帖子中向他提供了这份合同。在过去的几周里，罗根一直是各个在线平台强烈攻击的目标，以期迫使 Spotify 删除他关于 COVID-19 讨论的播客内容。
+2月9日的文贵大直播注定载入史册。当节目进行到1小时50分钟时，在郭先生收到一条手机信息后，抑制不住内心的激动振臂一呼，耶！原来是郭先生诉瑞银（UBS）海通证券股票投资的案子，自2015年起，历时七年终于在英国伦敦法院正式立案。郭先生评价，这是打响了新中国联邦直面沼泽地的第一仗，意义非凡。**当日敲下法官槌的是一位英国大法官萨拉·科克瑞尔（Sara Cockerill）**。
 
-“不，Spotify 莫名其妙地和我连在了一起，让我们看看会发生什么，”罗根在德克萨斯州奥斯汀的活动中说。
+关于此案完成英国申请立案的过程，有媒体零星的报道，对此案稍有涉猎：
+英国高等法院法官周三的裁决，意味着这位中国富商对瑞银提起的诉讼可以进入审判程序。大法官萨拉·科克瑞尔周三裁定，“**事实是，法院将调查的损失，肯定是由瑞银伦敦在2015年7月6日至8日期间的行为当时在伦敦造成的。至少有一种分析认为，损失发生在那里。这本身就产生了一个联系点**”。
 
-本周早些时候，Rumble 首席执行官克里斯·帕夫洛夫斯基（Chris Pavlovski） 在一封信中写道，“我们愿意为你提供 1 亿”来使用 Rumble，Rumble 被视为 YouTube 或 TikTok 等视频平台的新兴替代品。
+就此，萨拉·科克瑞尔大法官进入爆料革命战友视线。今天我们期待通过对科克瑞尔大法官生平爱好的介绍，执业经历的分析，还原出一个有血有肉的充满正义感的大法官。
 
-“你在四年内，以 1 亿美元的价格，将你所有的节目带到 Rumble，无论新旧，没有审查，你看如何？”巴甫洛夫斯基补充说， “这是我们拯救世界的机会。是的，这是完全合法的。”
+萨拉·科克瑞尔在伦敦北郊清福德的一所小学接受教育，然后获得全额奖学金进入汉普顿的埃莉诺·霍勒斯夫人私立中学；接下来她在牛津大学圣安妮学院学习法律，1989年获得法学一等学位，并获得牛津的埃尔登奖学金。
 
-围绕 Spotify 的争议始于创作歌手尼尔·杨（Neil Young） 要求流媒体音乐服务，要么删除他的音乐，要么删除罗根的节目。后来，Spotify 的一位发言人表示，将删除杨的歌曲，尽管这家总部位于瑞典的公司表示，将在某些播客中添加有关 COVID-19 的警告。
+在1990年她获得律师资格，1991年至2017年在商业律师协会执业，在各种法院和仲裁庭的国际商法方面积累了丰富的经验。在2011年被任命为女王大律师（该荣誉头衔旨在表彰对法律专业或公共生活做出重大贡献的律师）。她擅长包括航运和国际贸易交易、保险和再保险索赔、法律冲突和民事诉讼中的强制证据所引起的一系列争议。她也是《民事诉讼中的强制证据的法律与事务》（2012出版）一书的作者。
 
-上周晚些时候，一段经过大量编辑和断章取义的视频显示，罗根在 10 多年的播客中多次说出“黑人”（Nigger）。一天后，罗根对这段视频发表了讲话，并发表了道歉，但指出这段视频经过编辑，缺乏语境。
+在被任命大法官之前，她在各种仲裁程序中担任仲裁员，并自2016年起担任商事法庭和行政法院的副高等法院法官。2017年首席大法官指派科克瑞尔大法官到王座法庭担任商业法庭的提名法官，科克瑞尔大法官于2017年11月1日16时45分由首席大法官宣誓就职。
 
-然后在周日，Spotify 首席执行官丹尼尔·艾克（Daniel Ek） 宣布媒体将支持罗根，他也是 UFC 的长期评论员。
+工作之余，科克瑞尔又是一位深谙英国中世纪历史的文艺青年，她的志愿是成为一名历史学家，这让她在业余时间笔耕不辍。她的两本反映中世纪英国王室的传记小说《卡斯蒂利亚埃莉诺传记》于2014年出版，《阿基坦的埃莉诺传记》于2019年出版。后者入围著名英国历史畅销书作家丹·琼斯推荐2019年50本最佳历史书籍之一（书籍如下图）。
 
-“虽然我强烈谴责乔所说的话，并且，我同意他从我们的平台上删除过去剧集的决定，但我意识到，有些人会想要更多。我想非常清楚地说明一点——我不相信让乔沉默是答案，”埃克在一份声明中说。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/811-1.png)图片来源：bookdepository.com
 
-他补充说：“我们应该在内容范围有明确的界限，并在跨越时采取行动，但取消声音是一个下坡路。要更广泛地看待这个问题，批判性思维和公开辩论，才能推动真正和必要的进展。”
 
-在 Rumble 给罗根报价信之后，2021 年 12 月与 Rumble 达成交易的“CF收购公司”（ CF Acquisition Corp. VI ）的股票，在本周飙升了约 39%。
+从其出色的律政履历和独特的历史作家背景来看，科克瑞尔绝对是一个不可多得的专才。在专业的法官工作中，大法官的出手绝对不容小觑：
 
-素材来源：【theepochtimes.com】[Joe Rogan Turns Down $100 Million Offer: ‘No, Spotify Has Hung in With Me’](https://www.theepochtimes.com/joe-rogan-turns-down-100-million-offer-no-spotify-has-hung-in-with-me_4269489.html?utm_source=Morningbrief&amp;utm_campaign=mb-2022-02-11&amp;utm_medium=email&amp;est=ovHDIK05zb0Uk%2FRxwzeD21imZLSmtfgLUH4SnFc%2FsvpGdWPVfwhadDu6KxrPoV1n196%2BIw%3D%3D)
+2020年11月23日，一名伦敦法官周一驳回了一项诉讼，指控苏格兰皇家银行在未经适当授权的情况下签发价值数千英镑的支票；
 
-* * *
+2021年8月12日，英国政府被指控非法补贴化石燃料，主审法官科克瑞尔；
 
-审核：文乐
-校对：小东
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+2022年1月月21日，法官萨拉·科克瑞尔在高等法院表示，律师纪律法庭去年年初将托尼·吉斯从律师名单中剔除是正确的。
+
+西方国家的司法独立起始于1701年英国颁布《和解法案》，自该法案以后，只有通过议会两院签署《致女王书》，才有可能将高级法官免职。郭先生在大直播中，对美国的司法独立深信不疑。
+
+经过上述的脉络梳理，我们对科克瑞尔大法官有了一些感性的认识，我们相信，上天正在眷顾爆料革命。当爆料革命进入攻坚阶段，地球人都知道瑞银在金融圈地位和资金实力，但就有一位极富正义感的英国大法官站了出来助力新中国联邦。
+
+经过郭先生不断地启蒙和开智，现在我们知道，UBS瑞银是决定世界命运的沼泽地势力以及中共盗国贼家族重要的财富聚集地，该金融帝国内隐藏着数百年来所累积的上百万亿美元财富和黑账。期待此案在伦敦立案后，未来在全球正义力量的帮助下，撬开瑞银的秘密数据库大门，找回中共盗国贼在西方藏匿的巨额资产，打开灭共的最后一道大门。
+
+参考链接：
+1、[Mrs Justice Cockerill | Courts and Tribunals Judiciary](https://www.judiciary.uk/publications/mrs-justice-cockerill/)
+2、[Sara Cockerill Author homepage](https://www.saracockerill.com/)
+3、[Simon Bryan QC and Sara Cockerill QC Appointed as Justices of the High Court – Essex Court Chambers](https://essexcourt.com/simon-bryan-qc-sara-cockerill-qc-appointed-justices-high-court/)
+4、[London Judge Greenlights Chinese Billionaire’s Case Against UBS (wealthbriefing.com)](https://www.wealthbriefing.com/html/article.php?id=193674)
+5、[Current Judges (commercialcourt.london)](https://www.commercialcourt.london/current-judges)
+6、[Subscribe to read | Financial Times (ft.com)](https://www.ft.com/content/3e9c5459-cda0-4209-9b81-18fc1dbf51f5)
+7、[UK government accused of illegally subsidising fossil fuels | Euronews](https://www.euronews.com/green/2021/12/08/uk-government-accused-of-illegally-subsidising-fossil-fuels)
+8、[Independence | Courts and Tribunals Judiciary](https://www.judiciary.uk/about-the-judiciary/the-judiciary-the-government-and-the-constitution/jud-acc-ind/independence/#:~:text=The%20fundamental%20concept%20of%20judicial,hold%20office%20during%20good%20behaviour.)
+
+发布：文泓
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
