--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,74 +1,270 @@
 ---
-title: 币圈新闻动态：喜币（HCN）价格目前在46.304 HDO
+title: 每日快报：福奇和CCP &#8220;从第一天起 &#8220;就掩盖了COVID的起源
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1994409/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1994432/)
 
-*喜马拉雅华盛顿DC 编辑：aQ*
+*作者：****DAISY***
 
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/07/ScreenShot-2021-07-31-at-16.20.22@2x.png)
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/每日快报.png)
 
+# ***今日摘要***
 
-
-## 每日一问
-
-
-
-
-
-震荡下行是不是最考验人心的?
+1. **[美国誓言加强印太地区的努力以反击中共国](http://地区#)**
+2. **[科默议员指责福奇和CCP “从第一天起 “就掩盖了COVID的起源：他是个疯狂的科学家吗？](http://议员#)**
+3. [**中共国向台湾派出大批军机**](http://台湾#)
+4. **[美国和中共国驻联合国大使在乌克兰问题上相互指责](http://大使#)**
+5. **[2022年奥运会将标志着中共国和俄罗斯联合起来对抗美国的时刻](http://对抗#)**
 
 
+# 重要事件
+
+- **[02.11 VOA：美国誓言加强印太地区的努力以反击中共国](https://www.voanews.com/a/us-vows-stepped-up-indo-pacific-effort-in-push-back-against-china-/6438437.html)**
+
+
+华盛顿- 美国周五誓言将向印度-太平洋地区投入更多的外交和安全资源，以回击它认为中国试图建立一个地区势力范围并成为世界上最有影响力的大国的企图。拜登政府在一份12页的战略概述中说，它将关注该地区的每个角落，从南亚到太平洋岛屿，以加强其长期地位和承诺。”中华人民共和国正在结合其经济、外交、军事和技术力量，追求在印度-太平洋地区的势力范围，并寻求成为世界上最有影响力的大国，”它说的是中华人民共和国（PRC）。
+
+“我们在未来十年的集体努力将决定中华人民共和国是否能成功地改变有益于印度-太平洋和世界的规则和规范，”概述说。该文件的发布恰逢美国国务卿安东尼-布林肯访问印太地区，意在强调美国对该地区的重视，即使华盛顿正在努力应对与莫斯科的危险对峙，莫斯科在乌克兰边境附近集结了超过10万名军队，激起了西方对入侵的担忧。这也是在中国和俄罗斯上周宣布建立 “无限制 “的战略伙伴关系之后，他们发表了最详细和最坚定的声明，要共同合作–反对美国–建立一个基于他们自己对人权和民主的解释的新国际秩序。
+
+在其文件中，美国发誓要实现联盟的现代化，加强新兴的伙伴关系，并投资于区域组织。它特别强调了 “一个强大的印度 “作为积极的区域愿景的合作伙伴的重要性。它说，美国将追求一个 “自由和开放的印度-太平洋……通过一个强大和相互加强的联盟网络”。根据未来12-24个月的行动计划，该文件透露华盛顿将 “有意义地扩大 “其在东南亚和太平洋岛屿的外交存在，并优先考虑与太平洋岛国的关键谈判，这些谈判涉及美国军队的准入，而这些谈判在过去一年似乎陷入了僵局。该文件也强调：”我们将重新把安全援助的重点放在印度-太平洋地区，包括建立海洋能力和海洋领域意识。
+
+关于北京声称属于自己的自我统治的台湾这一高度敏感的潜在热点，华盛顿将与该地区内外的伙伴合作，以维持将该岛与中国分开的海峡的和平与稳定。行动计划还发誓要扩大美国海岸警卫队在南亚、东南亚和太平洋地区的存在和合作，华盛顿已将中国视为对渔业和自由贸易路线的威胁。”我们认识到我们改变中国的能力有限，因此寻求塑造围绕中国的战略环境，”一位美国政府高级官员告诉记者，该文件并没有体现政府更广泛的中国战略。”我们的中国战略是全球范围的。他说：”它认识到印度洋-太平洋是一个竞争特别激烈的地区。
+
+该文件重申美国计划在2022年初推出印太经济框架，政府希望这一举措至少能部分填补自前总统唐纳德-特朗普在2017年退出多国贸易框架以来与该地区交往的一大空白。它说，美国的贸易方式将 “符合高的劳工和环境标准”，这一提法明确表明，政府将坚持其誓言，在与该地区的经济交往中避免损害美国的就业。
+
+- **[02.11 Fox News：科默议员指责福奇和CCP “从第一天起 “就掩盖了COVID的起源：他是个疯狂的科学家吗？](https://www.foxnews.com/politics/comer-fauci-ccp-cover-up-covid-origins-mad-scientist)**
+
+
+众议院监督委员会排名第一的成员詹姆斯-科默（James Comer）指责中国和白宫首席医学顾问安东尼-福奇博士 “从第一天起 “就分别致力于掩盖COVID-19的起源。科默在周四接受福克斯新闻数字频道的电话采访时对福奇和中国共产党（CCP）提出了指控，同时还指责拜登政府浪费了 “大量时间 “来查清武汉实验室泄密理论的真相。
+
+这位众议院监督委员会的首席共和党人还指出，拜登总统承诺让他的情报团队在 “90天内 “调查此事，结果是没有结论的报告。”90天过去了，100天过去了，他终于发布了一份报告，说’好吧，他们没有发现任何东西’，”科默说，他称赞共和党人公布了显示科学家理论上来自武汉的实验室泄漏的电子邮件。这位议员警告说，对病毒的起源进行彻底调查的时间越长，就越难具体证明其起源。
+
+议员科姆、乔丹披露了新的福齐公司的电子邮件，他们说这些邮件指向了Covid-19实验室泄漏的 “掩盖”。他还指责中国和福奇在COVID-19的起源上 “从第一天起就进行了大规模的掩盖”。”随着时间的推移，要毫无疑义地证明这东西的来源将更加困难，但在我看来，从第一天起就有一个大规模的掩盖–不仅仅是共产主义中国，还有福奇博士，”科默说。”我想知道–这是我，我不代表委员会发言–但我想知道：他是一个疯狂的科学家吗？” 科默还说。”我的意思是，为什么他对我们正在资助功能增益研究的事实不愿意透露？”
+
+这位肯塔基州的共和党人说，”毫无疑问”，中共正试图掩盖病毒在武汉病毒研究所（WIV）的起源，并指出中国在大流行病开始时在武汉对动物进行测试，而没有测试 “他们用来做这些功能增益研究的原始小鼠”。他还指出，中国军方在大流行的 “早期 “就进入了武汉实验室，福奇在大流行开始时 “应该提醒川普政府 “主要科学家的实验室泄密理论和 “美国税款 “被用于生态健康联盟在武汉病毒所进行的功能增益研究。”这些都没有转达给川普总统，那么为什么没有转达呢？所以我们很想让福奇博士来，但我现在已经到了宁愿福奇来的地步”，电子邮件中的科学家说。他说，福奇有 “公开的邀请”，可以在 “任何时候 “向众议院共和党人讲话。
+
+科默和俄亥俄州众议员吉姆-乔丹上个月公布了部分电子邮件，显示福奇知道COVID-19可能被故意修改并从武汉病毒学研究所泄露出来.议员们向卫生与公众服务部（HHS）部长Xavier Becerra发出一封信，指出2020年2月1日的一次电话会议，其中包括福奇和前国家卫生研究院院长Francis Collins，会议讨论了该病毒的起源。信中说，其他科学家也参加了这次电话会议，其中四人写了一篇题为 “SARS-CoV-2的近端起源 “的论文，并在电话会议三天后发送给了福奇和Collins。该文章没有论证该病毒起源于实验室。
+
+国家过敏和传染病研究所没有立即回应福克斯新闻数字的评论请求。
+
+- **[02.11 Defence-Blog：中共国向台湾派出大批军机](https://defence-blog.com/china-sends-large-group-of-military-aircraft-toward-taiwan/)**
+
+
+台湾国防部周五报告说，中国空军于2月10日派出11架战机飞入台湾防空识别区。这些飞机包括8架沈阳歼-16战斗机，以及3架运-8平台的电子情报飞机。台湾官员说，他们对解放军出动飞机的反应包括争夺战机，动用防空资产以进一步监控局势，并通过无线电向中国飞机发出警告信息。
+
+中国声称台湾是自己的领土，一年多来，台湾一直抱怨中国空军多次在这个民主治理的岛屿附近执行任务，而且往往是在其防空识别区的西南部。
+
+- **[02.11 National Interest： 美国和中共国驻联合国大使在乌克兰问题上相互指责](https://nationalinterest.org/blog/buzz/american-and-chinese-ambassadors-un-trade-barbs-over-ukraine-200519)**
+
+
+美国大使琳达-托马斯-格林菲尔德敦促中国帮助制约俄罗斯，而中国大使张军指责美国加剧紧张局势。周四，在美国联合国大使Linda Thomas-Greenfield敦促中国帮助制约俄罗斯的行为之后，美国和中国的外交官相互指责对方加剧了正在发生的俄乌危机。托马斯-格林菲尔德的言论引起了她的中国同行的愤怒。
+
+托马斯-格林菲尔德告诉CNN，”我们希望中国人在鼓励俄罗斯人做正确的事情方面发挥作用”，并缓和其在乌克兰边境的存在，他指出，北京以前曾明确表示支持区域稳定，反对用武力调整国际边界的企图。大使说：”这正是俄罗斯人正在做的事情–他们正在威胁边界的完整性，所以中国传递这一信息将是异常重要的。”
+
+中国的联合国大使张军在Twitter上回应了托马斯-格林菲尔德的批评。”我们的信息是一致和明确的：通过外交手段解决任何分歧，”张军在推特上说。”停止夸大紧张局势。俄罗斯的合法安全关切应得到认真解决。我相信我的美国同行已经听到了我前几天在安全理事会的发言。”
+
+俄罗斯军队沿其与乌克兰的西部边界集结，以及在附近的白俄罗斯进行军事演习，导致人们担心俄罗斯正在准备入侵。美国政府上周声称，它发现了克里姆林宫的 “假旗 “计划的证据，涉及从乌克兰境内攻击俄罗斯军队，为俄罗斯的入侵提供了理由。俄罗斯断然否认它打算入侵乌克兰，但它要求美国和北约在撤军前提供一系列安全保证。美国和欧洲国家拒绝了这些要求中的大部分。
+
+近年来，中国和俄罗斯一直在追求更紧密的政治和经济联系。两国都越来越多地为自己的执政行为辩护，这些行为在西方国家通常被称为独裁和压迫，是美国出于政治原因而不公平地攻击的另一种民主形式。包括美国、俄罗斯和中国在内的联合国安理会常任理事国定于下周开会，讨论基辅的乌克兰政府与该国东部顿巴斯地区的亲俄分裂分子之间正在进行的战争。这次会议是由俄罗斯召集的，俄罗斯鼓励执行 “明斯克协议”，这是2015年在白俄罗斯举行的会谈中与乌克兰谈判达成的一套停火建议。
+
+- **[02.11 Washington Time：2022年奥运会将标志着中共国和俄罗斯联合起来对抗美国的时刻](https://www.washingtontimes.com/news/2022/feb/11/2022-olympics-will-mark-moment-china-and-russia-jo/)**
+
+
+派对结束了。2022年北京奥运会不会因为维吾尔族的种族灭绝或虚伪的美国企业赞助而被记住，甚至不会因为奖牌数而被记住。如果我们聪明的话，它将标志着我们最终注意到世界上两个最大的独裁政权联合起来反对西方，改变地缘政治格局的时刻。
+
+美国和欧洲如此陶醉于他们在冷战中的胜利，他们相信这将经得起时间的考验。公司和投资者在新的全球经济中赚取了数十亿美元。全球主义者宣扬他们的集体主义新宗教，放宽所有国家的主权，包括我们的国家。气候变化的暴发户们鼓励西方国家解构其经济。
+
+俄罗斯的寡头抢先购买了美国的优质房地产，西方产品充斥着曾经封闭的苏联市场，贸易优惠被给予了共产主义中国。这两个国家本应因此而转变为某种更开放、更自由的社会。但这并没有发生。30年来，为了美国人对更便宜的商品和更大的利润的无止境的渴望，我们一直在搅拌一个沸腾的锅，使邪恶的酒水变浓。在这样做的过程中，我们故意将我们最大的地缘政治敌人融入我们的经济。
+
+中国国家主席习近平和俄罗斯总统弗拉基米尔-普京的联盟已经酝酿了多年。现在很清楚的是，无论美国如何制裁，都无法有意义地阻止双方的领土或混合战争侵略。中国想要俄罗斯的能源。普京先生摇摇欲坠的经济需要中国的技术和产品。双方都将为对方提供财政和军事支持。无论俄罗斯是否入侵乌克兰，或中国是否入侵台湾，美国认为的弱点已经在这些大国之间形成了一个将持续几十年的联盟。无论我们是否愿意，我们在过去三十年中充满自拍、智能手机、政治丑闻、新性别和最新可穿戴技术的自我沉睡已经结束。
+
+俄罗斯、中国和伊朗之间蓬勃发展的能源联盟正在牢固地建立一个超级集团，该集团将从欧洲延伸到太平洋。巴基斯坦很可能会站在这个新轴心国一边，而印度将被压迫到防御态势，需要美国的更多支持。对西方来说，遏制这个专制强国很可能不会像上个世纪那样有可能。虽然遏制可能是不现实的，但经济和军事压力仍然可以是有效的。拉拢我们的盟友，拉走与中国和俄罗斯都建立了关系的其他国家，这个漫长而艰难的过程必须认真地开始。
+
+在这里，华盛顿和各州首府需要开始监管中国和俄罗斯的利益，使其退出主要行业，包括能源、房地产、农业、电信和科技。接受联邦税款的大学应该切断与中国研究人员和资金的联系。必须优先考虑有利于自由、民主国家而非与中国共产党结盟的国家的新贸易协议。应该建立一个西方能源合作组织，结合使用核电、天然气和可再生能源，以确保与西方结盟的国家独立于能源讹诈，以及与 “一带一路 “等项目相关的高政治和经济成本。
+
+美国必须立即开始增加锂和其他稀土金属的国内生产。30年来，美国一直处于单极世界的顶端–这个世界曾一度产生了更多的民主国家和更自由的社会。但绝对权力是一种自古以来诱惑人类的鸦片。今天，像习近平先生、普京先生和伊朗毛拉这样的独裁者正在崛起，在全球范围内散布他们的阴影。他们就在我们的后院。他们在我们的门口。他们在我们的房子里。长期以来，我们被我们对和平与繁荣的渴望所蒙蔽，没有意识到还有更重要的东西–自由。历史已经证明，当自由在世界的大片土地上受到威胁时，其影响将到达我们的海岸。
+
+这种全球转变也应有助于重新连接我们的自我保护意识、自豪感和民族团结。它应该具有抵制和排挤我们中间与共产主义、法西斯主义和社会主义相一致的危险意识形态的作用。几代人以来，我们凝聚了意愿，为无数的灵魂带来了自由，拯救了无数的生命，尽管我们自身的利益常常愚弄我们，使我们认为动乱、恐怖和暴政是别人的问题。几十年来，美国人一直被学术界和媒体中的左派教育，他们被越南的伤痕所困扰，认为对共产主义的讨伐是愚蠢的、抽象的努力。共和党人害怕日益内向的公众和前总统唐纳德-川普的愤怒，正在为解释如何处理俄罗斯和中国而打结。
+
+现在是清醒的时候了，要站出来。世界已经改变。打开灯吧。派对结束了。
+
+# 每日文贵说
+![](https://himalayawashingtondc.org/wp-content/uploads/2022/02/image-1-1024x576.png)
+# 更多要闻链接
+
+1. **[两家中共国银行将停止办理现金业务](https://www.ntd.com/2-chinese-banks-to-stop-handling-cash_738751.html)**
+2. **[美国中共国问题委员会要求调查牛腾宇的酷刑指控](https://www.rfa.org/english/news/china/us-torture-02112022125818.html)**
+3. **[印度地方官员：中共国军队进入印度领土驱赶牧民](https://indianexpress.com/article/india/chinese-troops-entered-indian-territory-drove-away-herders-local-official-7768400/)**
+4. **[疯狂腐败的北京奥运会](https://spectatorworld.com/life/crazy-corrupt-world-beijing-olympics/)**
+5. **[因为俄罗斯的威胁拜登的国家安全顾问敦促美国人在48小时内离开乌克兰](https://www.cnn.com/2022/02/11/politics/ukraine-russia-washington-white-house/index.html)**
+6. **[辉瑞公司推迟向FDA申请5岁以下儿童用COVID疫苗的时间](https://www.newsmax.com/newsfront/covid-vaccine-pfizer-children/2022/02/11/id/1056498/)**
+
+
+# 每日推特文摘
 
 
 
-## 喜马拉雅交易所要闻
+这些人为什么敢买卖人口？因为没有违法成本，当地警方也不会解救被贩卖的人，反而把她们当成摇钱树（入户口要收钱）。 是这个恶的制度催生了这一切，打倒共产党才能救中国。
 
 
 
 
 
-- 喜交所网站行情显示，喜币（HCN）价格目前在46.304 HDO，24H最高价格为48.500 HDO，24H最低价格为46.222 HDO，24H成交量约为155,789.568 HCN。
+> 这些人为什么敢买卖人口？因为没有违法成本，当地警方也不会解救被贩卖的人，反而把她们当成摇钱树（入户口要收钱）。
+> 是这个恶的制度催生了这一切，打倒共产党才能救中国~~~ [https://t.co/L8G55OGdCg](https://t.co/L8G55OGdCg)
+> — 小郑州 (@g\_defense777) [February 11, 2022](https://twitter.com/g_defense777/status/1491987058335887360?ref_src=twsrc%5Etfw)
 
 
 
 
 
 
-## 新闻动态
+
+美国承认双重国籍的前提是，你先有非美国国籍，后加入美国国籍的可以保持原国籍。而出生美国的不能拥有双国籍。谷出生于美国，若她入中国籍，依美国国籍法，她自动放弃了美国国籍。 这枚金牌到底算中国还是美国的，奥委会头疼了。 如果算中国的，美国会取消她国籍。 如果算美国的，中国诈欺失败。
 
 
 
 
 
-1. Decrypt报道，基于Solana的元宇宙项目Portals宣布完成500万美元种子轮融资，Greylock领投。该项目计划利用新资金扩大其团队，以开发更多的元宇宙项目，包括即将推出的Portals Downtown城市中心以及为创作者提供的增强工具。
-2. 2月12日消息，由Celer Network推出的跨链支付网络cBridge宣布与Oasis生态DEXYuzuSwap达成合作，将通过cBridge支持YuzuSwap上的资产跨链，并开启了为期30天的流动性激励活动。此前Celer与Oasis宣布合作，将cBridge集成至Emerald Para Time，意味着cBridge将实现对Oasis各类生态应用的桥接支持。此外，Celer和YuzuSwap还将基于Celer跨链消息框架（Celer IM）在广义消息传递、跨链智能合约调用等方面尝试更多合作。
-3. CNBC报道，Netflix宣布批准拍摄一部纪录片，内容与2016年加密货币交易所Bitfinex遭遇的黑客事件有关，纪录片重点将是参与本案的34岁的Ilya Lichtenstein和他31岁的妻子Heather Morgan二人的故事。据悉，拍摄本次纪录片的团队曾拍摄过《养虎为患》（Tiger King）和史上最大音乐节Fyre Festival诈骗案纪录片《地表最烂：FYRE豪华音乐节》。
-4. Crypto.news报道，格莱美奖得主说唱歌手Drake最近透露，他在即将到来的辛辛那提孟加拉人队与洛杉矶公羊队的超级碗比赛中下了总价值126万美元的比特币赌注。这位说唱歌手通过加密货币体育博彩平台Stake为公羊队投入了超过47.1万美元，其中包括加时赛。Drake也表现了对公羊队外接员Odell BeckhamJr.的信心，在他身上投注78.4万美元。
-5. 2月12日消息，固定收益交易平台Strips宣布其去中心化利率衍生品交易所(IRX)在Arbitrum上线主网测试版。“我们很高兴欢迎Strips Finance加入Arbitrum生态系统。Strips Finance的利率交易是投资者通过收益农业和交易杠杆对冲价格波动的绝佳工具。”
-6. 官方消息，波卡生态项目Acala宣布推出去中心化多抵押稳定币Acala Dollar（aUSD），aUSD将成为Acala生态DeFi经济的核心并作为支持波卡生态的去中心化稳定币，目前首批接受用于铸造aUSD的抵押品是DOT和LCDOT，这些抵押品可用于开设抵押债务头寸(CDP)以铸造aUSD。
-7. 官方消息，首个建立在Injective上的GameFi平台Injective Trading Guilds正式成立，并将建立专属的元宇宙场景。
-8. 2月12日消息，P2E链游Axie Infinity宣布将于第一季度末上线Origin（BattlesV3），该产品将拥有全新的界面、游戏机制、艺术、特效、故事情节和广泛的入门体验。
-9. 官方消息，波卡生态项目StaFi与Immunefi合作推出针对rDEXV1的漏洞赏金计划，奖金最高达2.5万美元。据介绍，rDEXV1是由StaFi开发的AMMDEX，旨在解决与rTokens（StaFi发行的质押衍生品）相关的流动性问题。它将为所有基于StaFi链的rTokens提供去中心化交易服务。作为StaFirToken生态系统的重要组成部分，rDEXV1现在部署在基于Substrate的StaFi链上。用户铸造的原生rTokens可以直接通过rDEX进行交易，以获得更好的流动性。
-10. News.bitcoin报道，美国证券交易委员会（SEC）主席Gary Gensler本周在接受彭博社采访时表示，该证券监管机构正在与商品期货交易委员会（CFTC）合作进行加密货币监管。此外，他说SEC正“努力与各种加密货币平台、交易所、借贷平台合作”，以确保投资者的保护。此前消息，美国商品期货交易委员会（CFTC）主席表示，加密货币现金市场将受益于CFTC的更多监管，CFTC需要更多资源来监管加密货币。
-11. 2月12日消息，律师James K. Filan在推特上分享Ripple与美国SEC之间的诉讼进展：美国SEC提出动议，要求将时间延长至2022年2月24日，以回应迫使Brad Garlinghouse（Ripple CEO）和委员Roisman交出2018年会议记录的动议。Ripple予以反对，表示回应应在2022年2月17日之前提交。
-12. UpcomingsNews报道，美国SEC最新披露的消息显示，美国橄榄球大联盟（NFL）曾在2021年下半年就“区块链技术相关问题”游说过该机构。与其他主要的北美体育联盟不同，NFL对加密货币赞助和合作采取了更为试探性的方法，相比之下，NBA、MLB和UFC都在积极拥抱加密行业，比如Crypto.com已经成为NBA湖人队主场冠名商并且赞助了UFC，而FTX已经赞助了美国职棒大联盟，裁判都穿着印有FTX标志的外套。
-13. 彭博社报道，加密借贷公司BlockFi准备支付1亿美元，以解决美国SEC和各州监管机构的指控，即该公司非法提供加密货币计息产品。相关处罚最早可能在下周宣布。据悉，美国SEC和各州监管机构一直在调查BlockFi提供的账户是否类似于应向监管机构登记的证券。BlockFi将向美国SEC支付5000万美元的罚款，并向各州支付另外5000万美元。对此，美国SEC的发言人拒绝置评。
-14. CoinDesk报道，韩国加密货币交易所V Global的七名高管因涉嫌参与2万亿韩元（17亿美元）诈骗而被判处监禁。V Global前首席执行官Lee Byung-gul被韩国水原一家法院判处22年监禁，并被命令支付1064亿韩元的罚款。另外六名高管被判处4至14年的监禁和23亿至1064亿韩元的罚款。自2021年上半年以来，韩国一直在部署加密货币监管框架。立法者还呼吁将操纵市场的行为定为犯罪。
-15. 彭博社报道，美国财政部暗示，计划让加密矿企免受“数字资产经纪商需向美国国税局（IRS）提交客户交易信息”规定的约束。这一决定包含在周五发给一组参议员的一封信中。
-16. Bitcoin.com报道，在上周的预算演讲中，印度财政部长宣布，加密货币的收入将被征收30%的税。这一征税计划使许多人认为印度政府已经使加密货币合法化。Sitharaman表示，加密货币是否“合法或不合法，这是一个不同的问题，但将征税，因为征税是一项主权权利。”
-17. BitcoinMagazine报道，美国密苏里州众议员Phil Christofanelli周四提出一项法案，寻求免除比特币在州、县和地方各级的财产税。Christofanelli议员在一份声明中表示，“这个行业有很大的潜力，可以加强密苏里州推动创造更大的经济和政治自由，我希望在未来几年内推进这项立法和进一步的提案。”若法案颁布，众议院第2672号法案将根据每种资产的用途，将”数字资产”区分为三个不同的类别，报了虚拟货币、数字证券及开放式区块链代币。其中，只有虚拟货币才能获得免税待遇。
-18. MSN报道，股票及加密交易平台Robinhood首席经纪官Steve Quirk在接受CNBC采访时表示，Robinhood正在寻求在海外扩大其品牌，而加密货币将获得最大竞争力并为该公司的业务扩张提供支持，他称“从监管的角度和涉及的所有其他方面来看，这可能是走向全球的最简单方式”。截止目前，Robinhood总计上线了七种数字资产，分别是BTC、ETH、ETC、LTC、DOGE、BCH和BSV。
-19. TechnoPixel报道，土耳其宗教事务主席Ali Erbaş在AHaber参加现场直播时被问及是否允许使用加密货币。Erbaş回应称：“不能说加密货币是不被允许的，但我们不能说它是被允许的，因为它不可靠，而且容易被滥用。我们把这个作为论文题目交给了我们的一位助理专家。我们的一位教授正在准备这篇论文。但到目前为止，我们不能说加密货币不被允许。”
+> 美国承认双重国籍的前提是，你先有非美国国籍，后加入美国国籍的可以保持原国籍。而出生美国的不能拥有双国籍。谷出生于美国，若她入中国籍，依美国国籍法，她自动放弃了美国国籍。
+> 这枚金牌到底算中国还是美国的，奥委会头疼了。
+> 如果算中国的，美国会取消她国籍。
+> 如果算美国的，中国诈欺失败。 [https://t.co/tx4aMSRPvF](https://t.co/tx4aMSRPvF)
+> — Lucy (@Evergreen2k) [February 11, 2022](https://twitter.com/Evergreen2k/status/1492198002634678282?ref_src=twsrc%5Etfw)
 
 
 
 
 
-*编辑：aQ
-发布：文顾*
 
 
- 
+ASIO的负责人透露，该机构挫败了一个外国政府干预澳大利亚选举的阴谋。情报人士将矛头指向中共政权，该政权正暗中寻求推进其在澳大利亚的权力利益，并破坏澳大利亚的主权。
+
+
+
+
+
+> ASIO的负责人透露，该机构挫败了一个外国政府干预澳大利亚选举的阴谋。情报人士将矛头指向中共政权，该政权正暗中寻求推进其在澳大利亚的权力利益，并破坏澳大利亚的主权。 [pic.twitter.com/2JEEegxcK8](https://t.co/2JEEegxcK8)
+> — 云中君（澳喜特战旅） (@Jrg52192342) [February 11, 2022](https://twitter.com/Jrg52192342/status/1492152341625192448?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+瑞银UBS是暗黑沼泽地势力的总部核心、与中共CCP深度勾结合作，长期压榨奴役中国人民及世界人民。瑞银UBS是拥有100万亿美元的银行、最大的黑金藏匿之地，是中共建国以来唯一批准金融牌照的海外银行，“拿下UBS，拿下中国共产党半个财富帝国”，起诉瑞银UBS（并成功立案），是针对暗黑沼泽地的第一仗！
+
+
+
+
+
+> 瑞银UBS是暗黑沼泽地势力的总部核心、与中共CCP深度勾结合作，长期压榨奴役中国人民及世界人民。瑞银UBS是拥有100万亿美元的银行、最大的黑金藏匿之地，是中共建国以来唯一批准金融牌照的海外银行，“拿下UBS，拿下中国共产党半个财富帝国”，起诉瑞银UBS（并成功立案），是针对暗黑沼泽地的第一仗！ [pic.twitter.com/EK4LCe7rMM](https://t.co/EK4LCe7rMM)
+> — take down ccp (@okmyfriend6) [February 11, 2022](https://twitter.com/okmyfriend6/status/1492026701131698176?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+总理的底裤： 1920年，他在法国流浪加入叛国组织! 1924年， 他拿着苏联人的卢布回国颠覆政府! 1931年，他率队勒死顾顺章亲属30多人杀人灭口! 1934年， 他下令活埋数千红军伤员丢卒保帅! 1936年， 他欺骗张学良绑架总统，分裂国家! 1954年， 他打倒高岗、饶漱石!
+
+
+
+
+
+> 总理的底裤：
+> 1920年，他在法国流浪加入叛国组织! 1924年， 他拿着苏联人的卢布回国颠覆政府! 1931年，他率队勒死顾顺章亲属30多人杀人灭口! 1934年， 他下令活埋数千红军伤员丢卒保帅! 1936年， 他欺骗张学良绑架总统，分裂国家! 1954年， 他打倒高岗、饶漱石!
+> 
+>  [pic.twitter.com/8wbd3qRiEW](https://t.co/8wbd3qRiEW)
+> — 威廉 (@chen000007) [February 11, 2022](https://twitter.com/chen000007/status/1491976597850955777?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+冬奥村，芬兰选手房间水管爆了，中共第一时间找到该名选手，想要解决一下提出问题的人。莫非这就是中国质量？
+
+
+
+
+
+> 冬奥村，芬兰选手房间水管爆了，中共第一时间找到该名选手，想要解决一下提出问题的人🤣🤣🤣莫非这就是中国质量？🤣🤣🤣 [pic.twitter.com/tUZloYtz2e](https://t.co/tUZloYtz2e)
+> — 灭霸小米(澳喜特战旅) (@V56445280) [February 11, 2022](https://twitter.com/V56445280/status/1492092319692394498?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+在土匪土工流氓的怂恿“保护“下，运动员可以当着全世界的人面前明目张胆的做出如此无耻下流的事，这就是背后藏着排华由头吧？邪恶的小火苗正在燃烧。
+
+
+
+
+
+> 在土匪土工流氓的怂恿“保护“下，运动员可以当着全世界的人面前明目张胆的做出如此无耻下流的事，这就是背后藏着排华由头吧？邪恶的小火苗正在燃烧😡😡😡🤬 [https://t.co/ftUXooMyXY](https://t.co/ftUXooMyXY)
+> — 金小花仙子（澳喜特战旅） (@Tiffany46298479) [February 11, 2022](https://twitter.com/Tiffany46298479/status/1492048792182423554?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+瑞银藏着中共的半个财富帝国。瑞银是唯一一家在中共具有国内金融牌照的海外银行。瑞银就是沼泽地核心中的核心。瑞银的被立案，开启了我们与沼泽地战斗的第一仗，意义太大，七哥通过法律手段打开沼泽地通过瑞银和中共勾兑的证据，也打开了中共在西方的非法财富大门。UBS的黑账至少在100万亿美元以上。
+
+
+
+
+
+> 瑞银藏着中共的半个财富帝国。瑞银是唯一一家在中共具有国内金融牌照的海外银行。瑞银就是沼泽地核心中的核心。瑞银的被立案，开启了我们与沼泽地战斗的第一仗，意义太大，七哥通过法律手段打开沼泽地通过瑞银和中共勾兑的证据，也打开了中共在西方的非法财富大门。UBS的黑账至少在100万亿美元以上。 [pic.twitter.com/gRKM8EmlIU](https://t.co/gRKM8EmlIU)
+> — take down ccp (@okmyfriend6) [February 11, 2022](https://twitter.com/okmyfriend6/status/1492024568550412289?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+她一针见血地指出：西方某些企业和媒体为了利益，已经沦为邪恶的帮凶。
+
+
+
+
+
+> 她一针见血地指出：西方某些企业和媒体为了利益，已经沦为邪恶的帮凶。 [pic.twitter.com/Lv2kGGJ4n3](https://t.co/Lv2kGGJ4n3)
+> — 正视历史▪️传播真相🇺🇸 (@543d0m) [February 11, 2022](https://twitter.com/543d0m/status/1492105680924606471?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+中共的人看着加国政府一定会笑死了，加国咋就那么无能呢！派几个人混进去搞点乱，甚至殴打警察，然后让自己控制的媒体拍下来不停播放，让市民和警察愤怒，过几天出动警察镇压。这么小儿科的事情还要教。但是不排除小土豆很快就学会了。
+
+
+
+
+
+> 中共的人看着加国政府一定会笑死了，加国咋就那么无能呢！派几个人混进去搞点乱，甚至殴打警察，然后让自己控制的媒体拍下来不停播放，让市民和警察愤怒，过几天出动警察镇压。这么小儿科的事情还要教。但是不排除小土豆很快就学会了。 [https://t.co/yJ7mrjaDdx](https://t.co/yJ7mrjaDdx)
+> — 三票先生Mr.3rights (@threerights1) [February 11, 2022](https://twitter.com/threerights1/status/1492202166240567308?ref_src=twsrc%5Etfw)
+
+
+
+
+
+
+
+
+
+*编辑：**DAISY**
+审核发布：文顾*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
