--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,24 +1,43 @@
 ---
-title: 中国人的防火墙
+title: DC大中华时事：中共外交部回应“中国留学生在韩被攻击”
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1994360/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1994390/)
 
-作者：道行天下
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0407.jpg)
-中共为了维护自己的的统治，对中国人民实行最严厉的思想管控，打着防止人民被西方腐朽思想与色情的浸浊，每年花费万亿高筑网络防火墙和网络水军，让亿万中国人生活在真实信息被封锁和篡改的所谓互联网时代。
+*编辑：NewFree(文华) / 作图：*JAY(杰伊)
 
-人民在他们无尽谎言的包装与宣传之中贫穷、愚昧生活着，不清楚外面真实的世界到底是什么样子，在井底听着中共的胡言乱语与一切谎言，迷信自己是世界最幸福的一群人，丧失探寻真相和独立思考的能力，卑微、愚昧生活着。
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
 
-打破防火墙，开启民智，应该是有识之士共同的理想与追求。中国人民被谎言欺骗太久，他们需要真相，需要去了解世界的发展与方向。但是我们必须明白一个残酷的现实，中共装在中国人头上的防火墙不是一堵，而是已经有了两堵：物理防火墙和心理防火墙。
+#   墙国妄语每日驳
 
-物理防火墙可以通过VPN网络翻墙，正如文贵先生所说，其实在中国没有真正的防火墙，只要你有决心，想探寻真相，有千万种方式进入到自由世界。可悲的是这样的人在中国是极小数，大部分人已经习惯和愿意生活在中共编织的的谎言中，他们没有了探寻真相的能力与勇气。
+### **02.11. ** 走进河南省淅川县邹庄村——“咱为国家做了点事，国家一直没忘了咱！”
 
-我接触到太多的海外中国人，在自由的网络世界里，他们还是一样生活在中共的宣传与媒体之中，哪怕你把真相、真实的信息放在他们的眼前，他们也不相信。中共骗他千百回，他待中共如初恋，并且这种情况是文化情度越低，越相信中共的鬼话，反而排斥自由媒体的真相，在他们的世界观里，话只能相信政府官方的，其他的都是阴谋论和不可信。当事实真相摆在眼前，他们又给自己找到借口，“我们是小老百姓，知道真相又怎么样，我们又起不了什么作用”，可以说中共给中国老百姓心理上安装的防火墙比物理防火墙更坚固，更难破。 对有点文化，对自由、民主向往的人群中共又筑起第三堵防火墙。通过蓝、金、黄，对西方自由媒体浸透，利用伪民运，海外五毛，给人带方向，一到到晚谈民主、自由，谈中共黑历史，看似很热闹，实则不伤中共分毫。口里骂着中共，实则与中共勾肩搭背，狼狈为奸。一旦真正有反共力量的形成，他们就成了最重要的破坏力量，有如伪类对爆料革命的抹黑和攻击。从上可以看出中共防火墙之深厚与狠毒，决不是物理网络防火墙打破，中国人民就能开启民智，走向民主与自由的，破除中国人心灵上的防火墙将是任重道远，中共不灭，民将永无宁日，中国人民将永远生活在贫穷与愚昧之中！
+*69岁的邹新曾有两个家，每个家都让习近平总书记挂念。一个家是一座红瓦白墙的二层小楼，在河南省南阳市淅川县九重镇邹庄村。2021年5月13日，习近平总书记走进这座小楼，详细询问邹新曾家日子过得怎么样。另一个家在16公里外的油坊岗村。11年前，因南水北调中线工程建设，邹新曾与油坊岗村几百名村民一起，搬迁至邹庄村。他们的老家沉入了丹江口水库，换来汩汩丹江水一路北上，奔向1277公里外的北京团城湖，沿途润泽20多座大中城市、130个县，惠及7900万人。习近平总书记说：“为了沿线人民能够喝上好水，大家舍小家为大家，搬出来了。这是一种伟大的奉献精神。”淅川县是南水北调中线工程的渠首所在地和核心水源区。修水库、护清水，淅川人二话不说，举家搬迁、转产转业、植树造林……国家持续帮扶库区，淅川人的生活越来越有奔头。当地村民说：“山有多绿，水就有多清。”经过淅川人不懈努力，丹江口水库各水质断面监测结果均达到或优于地表水Ⅱ类标准，水质稳定达标且持续向好。新春之际，记者在南水北调中线工程陶岔渠首极目远望，只见水面澄净，宛如一块晶莹剔透的碧玉，滋养着库区千家万户。*
+
+***简评：*中共试图通过样板工程来掩盖整个体制的腐败和无能，通过改善少数人的生活来掩盖多数人生活的窘迫，通过党媒的宣传来掩盖社会的不公，通过拉拢一部分人来打压其他人，中共通过各种手段人为地把社会给分裂开来，使人们分子化再也团结不起来。在习太阳的领导下中共宣布实现全面小康社会，那么中共国现在为什么还有那么多扶不完的贫困村，那么多的留守儿童，那么多的社会乱象。中共的领导人每次为了展示关心百姓和民生，就去农村百姓家掀开锅盖问有没有吃的，再就是中共典型的不把人民当人看，而是当猪狗只关心有没有吃的，中共国的百姓从来没有享受到实惠的医疗和教育，更别说自由的体制和民主的法制，中国人就活在中共编织的谎言里。 中国的绿水青山和赖以生存的自然环境，都被中共以发展经济为借口破坏殆尽，中共国当前所展现出来的虚假繁荣，都是以牺牲子孙未来百年千年为代价换来的，可以说中共泯灭了中国人的人性，打断了中国的文化脊梁，破坏了赖以生存的自然环境，只有消灭了中共中国人才可以重获新生。**
+
+### 02.11. 外交部回应“中国留学生在韩被攻击”：中方高度关注！
+
+*据媒体报道，一名中国留学生日前在韩国遭到攻击，且该事件可能与中韩近日的各种舆论纷争有关。对此，中国外交部发言人赵立坚11日表示，中方对此事高度关注，中国驻釜山总领馆已经联系当事人了解情况并提供积极协助，协调当地警方立案调查并将持续跟进。“我们将全力维护在海外的中国公民的合法权益和人身安全。”赵立坚回应。*
+
+***简评：*中共研究生产制作生化病毒，并在世界毫无防备的情况下将其扩散到全球，世界的人民无时无刻遭受着来自病毒的威胁和死亡，在经济和生活上更是饱受病毒的折磨，世界人民心中不断积压着对中共的怒火，中共深知难逃病毒追责，因此继续把中国人绑架在中共这列死亡列车上，不断给世界制造仇恨中国人的事端。  中共举办北京冬奥会，利用裁判和各种手段与国外运动员进行不公比赛，为夺金牌不择手段，这不仅激怒了运动员，同时也激怒了各个国家的民众，因此韩国民众就在中国大使馆前举行了示威游行活动，冲动的韩国民众就把对中共的怒火倾泻到了无辜的海外华人身上。 中共的罪恶行径就是海外华人华侨最大的安全隐患， 新中国联邦和所有的海外华人华侨应该告知世界中共不等于中国人，中共是全世界共同的敌人，早日消灭中共，才能还世界和平和稳定。**
+
+### 02.11. 美媒：北京冬奥会在美“收视不高”却可能“史上最受欢迎”，原因有一个
+
+*“北京冬奥会，在美国的电视收视率不高”，《华盛顿邮报》当地时间9日一篇文章摆出了这样的现象，却给出相反的结论——此次冬奥会实际上可能比以往任何时候都更受美国人欢迎，这种“矛盾”背后的原因是，越来越多的人从通过电视看奥运，转变为通过YouTube和Tik Tok等平台收看。《华盛顿邮报》：NBC冬奥收视率惨淡，但并不意味着比赛在消亡文章提到，虽然新闻报道主要集中在令人苦恼的电视收视率上，但 NBC 通过在 TikTok、YouTube、脸书、Instagram、推特和其他数字平台上传播各种精彩片段，悄无声息地培养起广泛的奥运关注群体。据媒体此前报道，奥林匹克转播服务公司（OBS）2月10日在新闻发布会上说，北京冬奥会已成为迄今全球收视率最高的一届冬奥会，在转播时长、技术、内容制作方式等多方面都书写了新纪录。OBS首席执行官伊阿尼斯·埃克萨科斯介绍，奥林匹克转播服务公司将在北京冬奥会为转播商提供超过6000小时的内容，其中比赛内容近1000小时。“所有内容能够满足数字转播的需求，不同平台、媒体有不同的内容。”*
+
+***简评：*中共可谓是把自己的不要脸和无耻发挥得淋漓尽致，瞪眼说瞎话的能力可谓是举世无双，中共举办的北京冬奥会注定会是历史上最糟糕的冬奥会之一。首先，中共犯下对新疆的种族大屠杀遭受到了西方国家的外交抵制；其次，世界知名选手 几乎没有参加比赛，注定会是最丑陋的比赛之一；再次，中共买通裁判使用各种卑劣手段，注定会是最肮脏的比赛之一，最后，由于中共病毒的影响，注定会是最冷淡的比赛之一。众所周知，所有大型赛事的重要资金来源就是有线电视转播 ， 没有国际大型有线电视频道的转播，就注定了北京冬奥会惨淡收场，所有短视频的传播，更是把中共的丑陋展现无遗。 北京冬奥会将会变成冬眠会，也会是习太阳最后的国际表演，中共允诺给各国领导人来参加北京冬奥会的承诺也将无法兑现，就连中共曾经的狐朋狗友也将与其分道扬镳，中共也将彻底失去人心，消灭中共也必将是世界最正义的事情。**
+
+#   港台资讯
+
+
+![](https://media.discordapp.net/attachments/858887785507323904/941890811094781952/D.C_Cre8GreatChina.001.jpeg?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/941890811635839046/D.C_Cre8GreatChina.002.jpeg?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/941890812181106768/D.C_Cre8GreatChina.003.jpeg?width=1043&amp;height=586)
 
 
 
-审核校对：Barry Jack
-上传排版：F
+
+*编辑：*NewFree(文华)
+*作图：JAY(杰伊)
+发布：文顾*
 
  
 
