--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,25 +1,31 @@
 ---
-title: 台湾使用HPAY完成第一台汽车交易
+title: 美大学生校队完胜中共外聘职业联军
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1994357/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1994371/)
 
-署名: 纽约香草山医疗部 – 云豹
+撰稿：纽约香草山 – 宁文静
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-2.png)
-2月10日，台湾农场的大牛及政清团队直播使用HPAY购买及交付第一辆汽车的实况。交易标的是一台2019年出厂的宝马 X3休旅车二手车，交易金额约为1200 HCN。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1174.png)
-购车的买主是在HCN 21美元左右时进场购买喜币的。以交易价1195个喜币来计算，买主花费的成本价约为25095美元。以10日喜币价格48美元来计算，买主已经省了一半以上的价钱。买卖双方当场使用HPAY，瞬间就完成了买车价金的传送。
+2月10日，冬奥会冰球男子组预赛，由美高校学生组成的美国队，以8:0完胜中共出巨资打造的，由美、加、俄职业球员组成的中国队。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1175.png)图片来源：https://news.sina.cn
+此前，自去年12月美国国家冰球联盟NHL宣布不派联盟球员参加2022北京冬奥会，冰球强国美国和加拿大匆忙组建了各自的国家队跨洋出征。这些年轻的球员绝大多数是在校大学生，从没参加过国际比赛；反观中国队的阵容，25人中，本土球员只有6人，其余的19人几乎都是通过中共国运作了四年的“大国战略”高薪招募的外籍球员，而且大部分是NHL职业球员。
 
-据卖家台湾农场大象表示，他选择以喜币交易，好处是可以省去被信用卡公司抽取的手续费、货款可以瞬间入账不必经由银行造成延迟收款、也可以享受未来喜币预期的涨价空间。另外，由于买卖家同为台湾农场的战友，卖家愿意在收到货款前就先办理该汽车的过户登记，显示了战友间的相互信任。
+根据国际冰球联合会的规则，允许球员代表一个国家效力，只要在那里生活了至少两年。中共国本来没有冰球队，仅仅为了实现奥运会东道主国“全项目”参与，不惜花费巨资打造了这支联合球队，没想到在首场美中交锋中，就以这般不堪入目的成绩，展现在世人面前。网友尴尬评论：落花流水。
 
-此次成交的车辆，是事先公告在Gettr上供人阅览、买主在阅览盖特上的内容后，自行与卖家联络，最后成交的。这也显示盖特发挥了商业价值。这次结合盖特、H PAY、HCN、GTV整个系列的运作，让整个汽车交易过程得以完美呈现。G 系列的实用性及魅力正逐渐显现在日常生活中。
+正如郭先生所说，北京冬奥会，一切都是假的。这场比赛正是另一个有力的佐证。
 
-新闻连接: [台灣第一台使用Hpay支付車輛交車](https://gtv.org/video/id=62052bf0a1fe5e57a426578d)
+【新闻链接】
+
+[US spoils host China’s hockey debut in 8-0 thrashing](https://www.france24.com/en/live-news/20220210-us-spoils-host-china-s-hockey-debut-in-8-0-thrashing)
+
+[China’s Olympic hockey hopes rest on North American talent](https://www.foxnews.com/sports/china-olympic-hockey-north-american-talent)
+
+[中国男子冰球历史首登冬奥舞台，0-8不敌美国队](https://news.sina.cn/gn/2022-02-10/detail-ikyakumy5282501.d.html?from=wap)
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
 
-编辑:飞虹
+编辑：谐趣园
 
-总编: Jack Li文阳
+总编：Ivy001
 
 校正/发稿：浪迹天涯
 
