--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,54 +1,54 @@
 ---
-title: 美参议员提决议谴责中共政府噤声彭帅
+title: 北京冬奥会成中共献丑会
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994478/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1994544/)
 
-翻译：Lulumi
+撰稿：一碗兰州（文远）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-12.jpg)图片来自网络
+“献丑了”原是一种谦逊的说辞，而在这次北京冬奥会上，中共国实打实地上演了一出“以武会友”，将对待中国人民的丑陋手段的亿分之一用在了“外国友人”身上，打了洋大人们一个猝不及防，给他们上了一节生动的“以警治国”课，希望由此使得他们认清中共的流氓本质。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1189.png)2018年5月6日，西班牙马德里，中国选手彭帅在与西班牙选手加宾·穆古鲁扎的第64轮比赛中出场。(路透社图片)
+中共国向来对新闻自由十分畏惧，将国内的高压舆论管控政策用在外国媒体身上，严格控制外国媒体的报道活动，外媒稍有不慎就会遭到干扰、阻拦，甚至受到暴力威胁。
 
-参议员里克·斯科特和马克·华纳带领他们的同事于2月4日提出决议，决议指出，彭帅案件“直接关系到更广泛的国际关注”，即2022年北京冬奥会的言论自由和运动员的安全。它还说，国际奥委会对围绕彭帅的争议的反应，让人怀疑它是否有能力和意愿站出来维护参加北京冬奥会的运动员的人权。
+荷兰广播公司NOS记者斯乔尔德·邓·达斯（Sjoerd den Daas）在北京街头进行直播报道时，突然被一名戴着“公共安全志愿者”（Public Safety Volunteer）红色袖章的中共安保人员粗暴地推走，其摄影灯也在被阻止直播后立刻遭到拆除。上述画面被全程直播了出去，与达斯进行直播连线的荷兰电视台女主持人一脸惊恐，不知所措，NOS电视台随即将画面切回了主播间。
 
-华纳在2月4日的一份新闻稿中说：“随着冬奥会的召开，我们决不能对中共令人不安的侵犯人权行为视而不见，国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
+美国网友评论：When it comes to foreign correspondents reporting on the Olympics, Beijing thinks “No news, is good news”. *(翻译：对于外国记者报道奥运会，北京认为“没有消息就是好消息”。)*
 
-该法案的共同提案人玛莎·布莱克本在2月9日的一份电子邮件声明中说，北京已经表明它“愿意让任何质疑他们的人失踪并保持沉默”，她指的是彭帅的案子，他是三届奥运会选手和前顶级双打选手。
+事后，荷兰记者达斯在推特上写道：“与此同时，另一个人拿走了我们的灯光装置。当被问到时，他们无法告诉我们做错了什么。最后我们在拐角处的停车场继续我们的电视直播。” “最近几周，我们和几位外国同事一样，在报道奥运会相关话题时，多次被警方阻挠或拦下。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide2-1.jpg)
+达斯推文截图
+达斯推文：“因此，很难像国际奥委会声称的那样将昨晚的事件视为孤立事件，尽管这种干扰很少在现场直播中发生。现在重新开始工作。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide3.jpg)
+达斯推文截图
+法国24频道记者安东尼·莫雷尔（Antoine Morel）在推特上发文表示，中共国给他们指派了一名所谓的“导游”，此人一直跟踪他们，一旦发现被采访者偏离官方话语，这名“导游”就会把他们拉走。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide4.jpg)
+安东尼·莫雷尔推文截图
+美国专题报道新闻公司（Feature Story News）的记者帕特里克·霍克（Patrick Fok）在推特上写道：“我在王府井被安保人员拦住，我出示了记者证，被告知不能采访人们关于冬奥会的感受。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide5.jpg)
+记者帕特里克·霍克推文截图
+除了对外国媒体记者的监控、限制，对于运动员们的抱怨，中共国也按照对待中国老百姓的办法处理——逼他们删除负面信息。
 
-去年11月，这位网球运动员在社交媒体上声称她受到一名中国高级官员的性侵后，从公众视野中消失了几周。然而，她最终重新出现并没有缓解国际机构的担忧，官员们说中国共产党无法提供表明她安全的可信证据。
+芬兰运动员的宿舍发生严重漏水事故，一些运动员将现场照片及视频上传到了Twitter和Instagram上，然后就受到中共国压力，要求他们删除相关信息。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide6-2.jpg)
+Reddit网站相关帖文![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide7-4.jpg)
+网传中共国冬奥会相关人员聊天
+控制媒体、管控舆论，是中共愚弄、统治人民的一贯手段，此次用到参加冬奥会的外国人身上也不是什么新鲜事。在2022寅虎灭共年这一重要时期，中共的愚蠢与疯狂只会让更多人认清它的邪恶，从而加速其灭亡！
 
-彭帅最近参加了一系列由中国政府组织的活动，包括与国际奥委会主席托马斯·巴赫共进晚餐；接受法国报纸《L’Equipe》的控制性采访，在采访中她由一名中国奥委会官员陪同；参加奥运活动时，她被发现与巴赫交谈。
+参考消息：
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1191.png)2022年2月8日，国际奥委会主席托马斯·巴赫在北京首钢大空港举行的2022年北京冬奥会第四天的女子自由式滑雪大空港决赛前与彭帅交谈。(盖蒂图片)
+大纪元：[被尾随 被监视 多国记者谈冬奥报导境遇](https://www.epochtimes.com/gb/22/2/8/n13563606.htm)
 
-在2月6日接受《L’Equipe》采访时，彭帅说她去年11月在社交媒体上对前副总理张高丽的性侵犯指控引发了一场“巨大的误解”。她收回她的指控，并否认在提出指控后失踪数周。这位36岁的网球名将还宣布了她的退役。
+推特：荷兰NOS 记者[达斯推文](https://twitter.com/sjoerddendaas/status/1489926485536391170?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1489926485536391170%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F22%2F2%2F8%2Fn13563606.htm)
 
-女子网球协会首席执行官史蒂夫·西蒙2月8日说，彭帅首次接受外国新闻媒体的采访，“并没有减轻我们对她之前指控的任何担忧”。该体育机构已经无限期地停止了在中国的所有比赛。
+推特：法国24频道记者[安东尼推文](https://twitter.com/Antwanmorel/status/1490214278837653504)
 
-国际奥委会是彭帅失踪后第一个接受采访的国际机构，它不加批判地转述彭帅关于她“安全和健康”的说法，引起了特别的关注。
+推特：美国专题报道记者[霍克推文](https://twitter.com/PaddyFok/status/1490528612650713088?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1490528612650713088%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F22%2F2%2F8%2Fn13563606.htm)
 
-布莱克本在一篇推特文章中暗示，国际奥委会正在与中共合作。
+Reddit：[Finland’s Olympic athlete dormitory in Beijing experienced a serious water leakage today. Some Finnish athletes posted this incident on Twitter and Instagram … and they were told to delete them by the Chinese authorities](https://www.reddit.com/r/China/comments/spwrtv/finlands_olympic_athlete_dormitory_in_beijing/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1193.png)图片来源：theepochtimes.com
+推特：[灭霸小米(澳喜特战旅) ：冬奥村，芬兰选手房间水管爆了，中共第一时间找到该名选手，想要解决一下提出问题的人](https://twitter.com/V56445280/status/1492092319692394498)
 
-“国际奥委会的行为与美国政府、人权组织、女子网球协会WTA以及其他国际机构和个人为确保彭帅的安全所做的努力背道而驰，”该决议写道。
-
-华纳在一份声明中说：“国际奥委会不愿意明确和有力地站出来反对中共，并呼吁对彭帅的安全和自由作出独立的保证，这强烈表明该委员会愿意将与中国的关系置于运动员的安危之上。”
-
-他补充说：“国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
-
-国际奥委会没有立即回应《大纪元时报》的评论请求。
-
-该决议案的共同提案人还有：谢利·摩尔·卡皮托、谢罗德·布朗、约翰·霍文、罗恩·怀登、特德·克鲁兹、杰夫·默克利、麦克·布朗、克里斯·冯·赫兰、鲍勃·凯西、汤姆·科顿、拉斐尔·华诺克、罗恩·约翰逊、让娜·沙希恩。
-
-去年12月，一项类似的决议在美国众议院一致通过。
-
-素材链接：[theepochtimes.com][US Senators Introduce Resolution Condemning Beijing’s Silencing of Peng Shuai](https://www.theepochtimes.com/us-senators-introduce-resolution-condemning-beijings-silencing-of-peng-shuai_4269086.html)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+编辑：云彩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
