--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,204 +1,25 @@
 ---
-title: 喜支付体现人类无条件支付的本能
+title: 中日财经爆┃“宁王”失宠
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1994476/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1994515/)
 
-[https://gtv.org/video/id=6205b50bb0af02660af230c2](https://gtv.org/video/id=6205b50bb0af02660af230c2)
+撰稿：东京樱花团/华夏伊人
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1194.png)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fx0.ifengimg.com%2Fres%2F2021%2F8F38AC2D527E94536D36FEB0AB6E689ABE840E9F_size113_w998_h614.jpeg&amp;imgrefurl=https%3A%2F%2Fwww.tiantian9527.com%2Fnews%2F23029371.html&amp;tbnid=oUuhXRUz7Dj4HM&amp;vet=12ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ..i&amp;docid=ma88AApCqfAHHM&amp;w=998&amp;h=614&amp;q=%E5%AE%81%E5%BE%B7%E6%97%B6%E4%BB%A3&amp;ved=2ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ)
+2月10日，宁德时代开盘1小时跌幅超过8%，盘中加速下跌，最大跌幅达9%，股价跌破500元整数关口，成交量超100亿，市值蒸发1000亿。春节后四个交易日已经下跌近15%，市值蒸发2000亿元，股价创去年10月以来新低。
 
-它一下就秒到了
-Por qué eso llega en cuestión de segundo
+2022年1月，宁德时代发布的业绩预告称，其去年净利润为140亿元——165亿元之间，同比增长150%——195%，这是宁德时代上市以来的最高利润水平。2022年各大机构更是对其盈利预期看到300亿元的净利润。
 
-我们这叫在线支付
-Nosotros lo llamamos “pago en línea”
+尽管业绩增幅超预期，机构也给了很高的评价，为什么股价不涨反跌呢？现在，不仅仅是资金面对宁德时代不友好，就连消息面也开始唱衰：可能遭到美国制裁、核心客户“出逃”、新的储能解决方案出现等等。
 
-我们不是在线买卖
-Esto no es compra y venta en línea
+宁德时代在资本市场也比较受欢迎，去年三季度宁德时代还一举超过了茅台成为公募基金的头号重仓股，也是各大公募基金的“标配”。春节过后，画风突变，竟有券商突然唱空，表示“未来仍有明显下跌空间，建议逢高出货”，到底发生了什么？此前外资也是一直买买，而近10日，外资卖出金额33亿元，20日卖出金额更高达45亿元，现在开始“失宠”宁王了。
 
-只要对方是卖车的
-Si la otra persona quiere vender el carro
+也许是嗅觉敏感的资本嗅到了山雨欲来的血腥味道，楼倒屋塌时，逃跑的速度决定了生还的机率。内外夹击下，“失宠”的宁王该何去何从？但愿宁王安好。
 
-还有卖画的
-Y el que vende cuadros
+消息来源：[宁德时代大跌超5%失守500元大关，自历史高点已大跌近三成，跌到位了吗？](https://stock.stcn.com/djjd/202202/t20220211_4145588.html)
 
-咱俩说好了叫约定式付款
-Si nosotros dos ya acordamos esto se llama “pago convenido”
-
-跟这个交易没毛关系
-No tiene ninguna relación con esta transacción
-
-可人类给它设定好了身份证、年龄、资金来源
-Pero el ser humano lo configuró con cédula de identidad, edad y fuente de fondos
-
-这是全人类最黑暗的金融时代
-Esta es una Era financiera más oscura en toda la humanidad
-
-就是因为它造了太多假
-Porque en eso se hacen muchas falsificaciones
-
-我们有个战友 台湾的
-Tenemos un compañero luchador de Taiwán
-
-这不在我们农场的战友
-No está en nuestra finca
-
-一位女士 很棒的
-Una excelente dama
-
-我的老朋友了 93岁今年
-Es mi viejo amigo, este año cumple los 93 años
-
-她说文贵
-Ella dijo: “Wengui
-
-我就等着这个
-Yo he estado esperando esto”
-
-所以说人这个智商
-Por eso el coeficiente intelectual de una persona
-
-我在说这个93岁的一个台湾人
-La taiwanesa de 93 años que estoy diciendo
-
-昨天下午上线
-Ayer en la tarde se conectó
-
-她咔咔咔就转几笔
-Y así de la nada ya hizo varias transacciones
-
-人家93岁了
-Ella tiene 93 años
-
-人家啪啪啪自己处理完
-Y en un dos por tres ella misma resolvió
-
-她说七哥
-Ella dijo “Miles
-
-我把我这个手里边120万HDO
-Yo transferí 1.2 millones HDO que tenía en la mano
-
-转了还剩一万多
-Ahora me quedan 10 mil y pico”
-
-就这么简单
-Así de fácil
-
-而且就用自己的手机
-Además, con su propio celular
-
-大家记住第一个功能的核心
-Todos recuerden la primera función esencial
-
-无条件的交易支付
-Pago de transacción incondicional
-
-是你一生中找回你人类的财富的最本能
-Es el mayor instinto en la vida para recuperar tu riqueza humana
-
-第二条 买画
-Segundo, comprar cuadros
-
-吃饭、餐厅
-Comer, los restaurantes
-
-只要你足够有智慧
-Si tienes suficiente sabiduría
-
-你能省下完全
-Te podrás ahorrar totalmente
-
-你不需要过去支付的5%、10%、20%的钱
-No necesitas ir a pagar como en el pasado el 5, 10, 20% de dinero
-
-包括所有全世界的交易都是要付交易费
-Incluyendo todas las transacciones del mundo entero, debes pagar una tarifa por transacción
-
-这是给你0, 这个问题
-Este te está dando 0, este problema
-
-七哥跟他们奋斗了很长时间
-Yo tuve una lucha muy larga con ellos
-
-就那个王八蛋律师特别坏，他说
-Ese abogado infeliz muy malo, dijo
-
-必须收1.52什么高收费呀高风险
-Debes cobrar 1.52, que si tarifa alta, alto riesgo
-
-我说你
-Le dije
-
-要收1毛钱我就不
-Si tu vas a cobrar un centavo
-
-不会让新中国联邦任何人用你这个东西
-No dejaré que ninguno del Nuevo Estado Federal de China utilice esta cosa tuya
-
-必须是0交易
-Debe ser transacción 0
-
-为什么，我说我们战友没事了
-Por qué, le dije que nuestros compañeros luchadores si no tienen nada que hacer
-
-未来就是划钱玩
-En un futuro podrá jugar deslizando el dinero
-
-就这么简单 没事儿了
-Así de fácil, si no tiene nada que hacer
-
-睡觉前两口子就转钱玩
-Antes de dormir la pareja se pone a jugar transfiriendo dinero
-
-你给我100
-Tu me das 100
-
-我给你1000
-Yo te doy 1000
-
-你给我1000
-Tu me das 1000
-
-我给你，就划钱玩 咋的
-Yo te doy, así juegan deslizando el dinero, qué pasa
-
-你要是收费
-Si vas a cobrar
-
-我们就没有这个兴趣了
-Nosotros no tendremos este hobby
-
-你知道这意味着什么
-Sabes qué significado tiene esto
-
-兄弟姐妹们
-Hermanos y hermanas
-
-我们要让新中国联邦战友走出家门
-Nosotros queremos que los compañeros luchadores del Nuevo Estado Federal de China salgan de su casa
-
-去推销Hpay 的时候，你告诉他这是免费的
-Y promocionen el Hpay, le puedan decir que esto es gratis
-
-* * *
-
-日期：02/09/2022
-原视频标题：喜支付体现人类无条件支付的本能
-H Pay refleja el instinto del pago incondicional del ser humano
-原视频日期：02/07/2022
-原视频网址：[**https://gettr.com/post/psxnq73faf**](https://gettr.com/post/psxnq73faf)
-任务编号：KC451(3697)
-视频时间段：0:00-02:19
-西听校：洛杉矶盘古农场- 小文萱
-翻译：洛杉矶盘古农场- 霙霙（文霙）
-翻译终校：洛杉矶盘古农场- 小文萱
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
