--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,23 +1,53 @@
 ---
-title: 北约指责中共国“剥夺主权国家”选择盟友的权利
+title: 美参议员提决议谴责中共政府噤声彭帅
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994475/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994478/)
 
-编辑：七龙珠
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1181.png)北约秘书长延斯·斯托尔滕贝格在新闻发布会上。（EFE/Stephanie Lecocq）
-北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）今天警告说：在北京支持莫斯科反对北约扩大到东欧后，中共国企图“剥夺”主权国家的权利，选择加入国际联盟。斯托尔滕贝格提到了这两个大国“最近的声明”，其中，“中共国首次与俄罗斯一起呼吁北约停止接纳新成员”。他在与波兰总统安杰伊-杜达会晤后的新闻发布会上说：“这是企图剥夺主权国家做出自己选择的权利”，这一点在关键的国际文件中得到了体现。他强调，北约“尊重每个国家是否加入联盟的决定”，并说“我们的开放政策是一个历史性的成功，将自由和安全扩展到整个欧洲”。
+翻译：Lulumi
 
-他说：“我们必须尊重主权决定，而不是回到势力范围的时代，不是大国可以告诉别人什么可以做，什么不可以做。”他指的是乌克兰的情况，俄罗斯想否决乌克兰未来加入联盟的可能。2月4日，中共国家主席习近平和俄罗斯总统弗拉基米尔-普京在中共国首都冬奥会开幕前夕举行会晤后，关闭了反对西方的行列，承诺共同面对他们认为的“安全威胁”。在会议结束时，他们发表了一份公报，强调“中共国和俄罗斯反对北约进一步扩张”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1189.png)2018年5月6日，西班牙马德里，中国选手彭帅在与西班牙选手加宾·穆古鲁扎的第64轮比赛中出场。(路透社图片)
 
-此外，斯托尔滕贝格指出，美国、西班牙、丹麦和英国等盟国正在向北约提供更多的能力，以便在东部提供更多的监视和安全，这“反映了北约在那里是为了保护和捍卫，并密切关注乌克兰周围和北约边界发生的事情”。他回顾说，他们还提高了北约反应部队的准备程度，像高度戒备部队这样的要素可以在几天内部署，而像美国这样的盟国则向该反应部队投入了更多的军队（目前美国有8000人驻军）。斯托尔滕贝格说：“我们正在考虑对我们的姿态，对我们在联盟东部的存在进行更长期的调整”，他补充说：“在与北约军事指挥官密切磋商的过程中，在增加在联盟东部的存在，以加强威慑和防御。” 尽管盟国的首要目标仍然是让莫斯科缓和紧张局势，以便能够达成政治解决。杜达则呼吁北约在面对俄罗斯时保持团结，并确保所有盟国持相同立场。杜达说：“我认为北约在整个东翼的存在应该增加。”他强调：“所有希望得到这种加强的国家都应该得到这种加强。”他特别主张这些增援部队应“尽可能地多国化”。波兰总统今天还在布鲁塞尔会见了欧洲理事会主席查尔斯-米歇尔（Charles Michel）和欧盟委员会主席乌苏拉-冯德莱恩（Ursula von der Leyen），他说他与他们详细讨论了欧盟在俄罗斯最终决定进攻乌克兰的情况下对其准备的制裁。冯德莱恩在推特上说：“我们正在深入协调我们的准备工作，包括能源供应和制裁，以应对任何进一步升级。”
+参议员里克·斯科特和马克·华纳带领他们的同事于2月4日提出决议，决议指出，彭帅案件“直接关系到更广泛的国际关注”，即2022年北京冬奥会的言论自由和运动员的安全。它还说，国际奥委会对围绕彭帅的争议的反应，让人怀疑它是否有能力和意愿站出来维护参加北京冬奥会的运动员的人权。
 
-素材来源：【elconfidencial.com】[La OTAN acusa a China de “negar a naciones soberanas” su derecho a elegir alianzas](https://www.elconfidencial.com/mundo/2022-02-08/otan-contra-china-amenaza-libertad-naciones-soberanas_3371493/)
+华纳在2月4日的一份新闻稿中说：“随着冬奥会的召开，我们决不能对中共令人不安的侵犯人权行为视而不见，国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
+
+该法案的共同提案人玛莎·布莱克本在2月9日的一份电子邮件声明中说，北京已经表明它“愿意让任何质疑他们的人失踪并保持沉默”，她指的是彭帅的案子，他是三届奥运会选手和前顶级双打选手。
+
+去年11月，这位网球运动员在社交媒体上声称她受到一名中国高级官员的性侵后，从公众视野中消失了几周。然而，她最终重新出现并没有缓解国际机构的担忧，官员们说中国共产党无法提供表明她安全的可信证据。
+
+彭帅最近参加了一系列由中国政府组织的活动，包括与国际奥委会主席托马斯·巴赫共进晚餐；接受法国报纸《L’Equipe》的控制性采访，在采访中她由一名中国奥委会官员陪同；参加奥运活动时，她被发现与巴赫交谈。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1191.png)2022年2月8日，国际奥委会主席托马斯·巴赫在北京首钢大空港举行的2022年北京冬奥会第四天的女子自由式滑雪大空港决赛前与彭帅交谈。(盖蒂图片)
+
+在2月6日接受《L’Equipe》采访时，彭帅说她去年11月在社交媒体上对前副总理张高丽的性侵犯指控引发了一场“巨大的误解”。她收回她的指控，并否认在提出指控后失踪数周。这位36岁的网球名将还宣布了她的退役。
+
+女子网球协会首席执行官史蒂夫·西蒙2月8日说，彭帅首次接受外国新闻媒体的采访，“并没有减轻我们对她之前指控的任何担忧”。该体育机构已经无限期地停止了在中国的所有比赛。
+
+国际奥委会是彭帅失踪后第一个接受采访的国际机构，它不加批判地转述彭帅关于她“安全和健康”的说法，引起了特别的关注。
+
+布莱克本在一篇推特文章中暗示，国际奥委会正在与中共合作。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1193.png)图片来源：theepochtimes.com
+
+“国际奥委会的行为与美国政府、人权组织、女子网球协会WTA以及其他国际机构和个人为确保彭帅的安全所做的努力背道而驰，”该决议写道。
+
+华纳在一份声明中说：“国际奥委会不愿意明确和有力地站出来反对中共，并呼吁对彭帅的安全和自由作出独立的保证，这强烈表明该委员会愿意将与中国的关系置于运动员的安危之上。”
+
+他补充说：“国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
+
+国际奥委会没有立即回应《大纪元时报》的评论请求。
+
+该决议案的共同提案人还有：谢利·摩尔·卡皮托、谢罗德·布朗、约翰·霍文、罗恩·怀登、特德·克鲁兹、杰夫·默克利、麦克·布朗、克里斯·冯·赫兰、鲍勃·凯西、汤姆·科顿、拉斐尔·华诺克、罗恩·约翰逊、让娜·沙希恩。
+
+去年12月，一项类似的决议在美国众议院一致通过。
+
+素材链接：[theepochtimes.com][US Senators Introduce Resolution Condemning Beijing’s Silencing of Peng Shuai](https://www.theepochtimes.com/us-senators-introduce-resolution-condemning-beijings-silencing-of-peng-shuai_4269086.html)
 
 * * *
 
-审核：Aries的星
+*审核：文乐
 校对：阿伯塔
-发布：花羽
+发稿：Nuevo唐人*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
