--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,43 +1,41 @@
 ---
-title: 拜登自曝曾因颅动脉瘤住院
+title: 乔·罗根拒绝一亿美元薪酬：就待在Spotify
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994457/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994477/)
 
-翻译：Jenny Ball
+素材翻译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1183.png)图片来源：republicbrief.com
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1187.png)乔·罗根（Joe Rogan）于 2021 年 7 月 9 日在内华达州拉斯维加斯的 T-Mobile 竞技场参加 UFC 264 的称重仪式。（Stacy Revere/Getty Images）
 
-周四，民主党人乔·拜登出席会议讨论降低处方药成本，并借此机会谈论他个人与脑动脉瘤的斗争。
+喜剧演员乔·罗根周二在德州告诉观众，他不会接受视频平台 Rumble 提供的 1 亿美元独家主持他的节目的报价。
 
-他对脑瘤的承认发生在一个有趣的时间点，恰逢本周早些时候华盛顿一些共和党议员要求拜登接受认知测试，因为他们担心拜登的“精神衰退”已经“变得更加明显”，并可能阻碍他的判断。
+当罗根在 Spotify 的未来存在争议之际，Rumble的首席执行官本周在一篇广为流传的社交媒体帖子中向他提供了这份合同。在过去的几周里，罗根一直是各个在线平台强烈攻击的目标，以期迫使 Spotify 删除他关于 COVID-19 讨论的播客内容。
 
-拜登在一些公开场合谈到他自己的医疗费经历时语无伦次，这被“转折点”成员丹尼·德·乌尔比纳（Danny De Urbina）重点强调。
+“不，Spotify 莫名其妙地和我连在了一起，让我们看看会发生什么，”罗根在德克萨斯州奥斯汀的活动中说。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1185.png)图片来源：republicbrief.com
+本周早些时候，Rumble 首席执行官克里斯·帕夫洛夫斯基（Chris Pavlovski） 在一封信中写道，“我们愿意为你提供 1 亿”来使用 Rumble，Rumble 被视为 YouTube 或 TikTok 等视频平台的新兴替代品。
 
-事实是，华盛顿早就知道拜登的健康问题。
+“你在四年内，以 1 亿美元的价格，将你所有的节目带到 Rumble，无论新旧，没有审查，你看如何？”巴甫洛夫斯基补充说， “这是我们拯救世界的机会。是的，这是完全合法的。”
 
-2020 年 10 月，福克斯新闻主持人玛丽亚·巴蒂罗莫 (Maria Bartiromo) 告诉全国观众：“我的消息来源很可靠，两个医生告诉我说，乔·拜登有两个脑动脉瘤，他需要向人们解释这一点。”
+围绕 Spotify 的争议始于创作歌手尼尔·杨（Neil Young） 要求流媒体音乐服务，要么删除他的音乐，要么删除罗根的节目。后来，Spotify 的一位发言人表示，将删除杨的歌曲，尽管这家总部位于瑞典的公司表示，将在某些播客中添加有关 COVID-19 的警告。
 
-据当地特拉华新闻报道，自 1988 年以来，脑动脉瘤大部分都被掩盖了。
+上周晚些时候，一段经过大量编辑和断章取义的视频显示，罗根在 10 多年的播客中多次说出“黑人”（Nigger）。一天后，罗根对这段视频发表了讲话，并发表了道歉，但指出这段视频经过编辑，缺乏语境。
 
-保守派简报报道了 2020 年，希尔呼吁对拜登进行医学评估：
+然后在周日，Spotify 首席执行官丹尼尔·艾克（Daniel Ek） 宣布媒体将支持罗根，他也是 UFC 的长期评论员。
 
-“一群共和党议员再次向乔·拜登总统施压，要求他进行认知测试，因为他们认为，他的‘精神衰退’已经‘变得更加明显’，可能会阻碍他的判断。
+“虽然我强烈谴责乔所说的话，并且，我同意他从我们的平台上删除过去剧集的决定，但我意识到，有些人会想要更多。我想非常清楚地说明一点——我不相信让乔沉默是答案，”埃克在一份声明中说。
 
-近 40 名共和党国会议员希望 79 岁的拜登效仿他的前任、前总统川普开创的先例，因为最近的民意调查越来越多地显示，越来越多的美国人不确定，拜登的心理是否适合担任这项艰巨的总统工作。
+他补充说：“我们应该在内容范围有明确的界限，并在跨越时采取行动，但取消声音是一个下坡路。要更广泛地看待这个问题，批判性思维和公开辩论，才能推动真正和必要的进展。”
 
-周二，在前白宫医生、德克萨斯州众议员罗尼·杰克逊的带领下，其他 37 名共和党同事签署了一封致拜登的信，他们在信中表示，他们“担心”他的“当前认知状态”。
+在 Rumble 给罗根报价信之后，2021 年 12 月与 Rumble 达成交易的“CF收购公司”（ CF Acquisition Corp. VI ）的股票，在本周飙升了约 39%。
 
-“这不是党派问题。当我与川普总统讨论进行认知测试时，他急于向美国人民保证，并把假新闻媒体的故事戳穿，”杰克逊在信中写道。 “为什么拜登总统不这样做呢？”
-
-素材链接：[republicbrief.com] [Biden Reveals He Was Hospitalized For Cranial Aneurysms](http://republicbrief.com/biden-reveals-he-was-hospitalized-for-cranial-aneurysms/)
+素材来源：【theepochtimes.com】[Joe Rogan Turns Down $100 Million Offer: ‘No, Spotify Has Hung in With Me’](https://www.theepochtimes.com/joe-rogan-turns-down-100-million-offer-no-spotify-has-hung-in-with-me_4269489.html?utm_source=Morningbrief&amp;utm_campaign=mb-2022-02-11&amp;utm_medium=email&amp;est=ovHDIK05zb0Uk%2FRxwzeD21imZLSmtfgLUH4SnFc%2FsvpGdWPVfwhadDu6KxrPoV1n196%2BIw%3D%3D)
 
 * * *
 
-*审核：文乐
+审核：文乐
 校对：小东
-发稿：Nuevo唐人*
+发布：花羽
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
