--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,39 +1,36 @@
 ---
-title: 郭文贵先生2022年2月12日盖特视频（9分20秒）全文字版
+title: 丹麦和瑞典敦促公民离开乌克兰，欧盟表示不会撤离基辅
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1997314/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1997400/)
 
-听写整理编辑：东京樱花团/Peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-131.png)
-啊啊，战友们啊，小点声，亲爱的兄弟姐妹们，你们健身了吗？啊天呐，今天12号了啊。
+#### 撰稿：彩虹       
 
-啊兄弟姐妹们，昨天到现在很多战友发很多信息，求求大家了，别再说捐款，也别再说捐币，七哥需要你们有勇气。兄弟姐妹们，你活30年、40年，干一样工作，无论你是干啥的，开出租车的，开餐厅的，当厨师的，你干啥的，咱当小姐的，还是当大姐的，一辈子干一件事儿，就是做皇帝，我认为都很无聊，人生干嘛不尝试些新的呢？人生最重要的，我认为就是丰富，人生的价值在丰富。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1249.png)图片来源：Anadolu Agency
+据《国会山报》2月12日引述相关报道，面临俄罗斯可能入侵乌克兰的境况，丹麦和瑞典都在敦促其公民离开乌克兰，而欧盟则表示不会关闭基辅的外交使团。
 
-昨天闻风而动问我，每次大事做决定都是什么，看透生死，放下恐惧，更重要的，这个世界没什么了不起的，没有任何了不起的，昨天晚上有战友啊，说这个，他要救一个人，是他的当年的发小，不是啊，这就叫青梅竹马啊，就是爱人家，人家不爱他，就是这人被绑架了，后来他找到了，但是就在这7、8年他就没去救这个女的。
+据CNN报道，周五，丹麦外交部长一份声明中说：“建议不要去乌克兰旅行，建议所有在乌克兰的丹麦人离开该国。仍有可能通过常规的航空路线、公路和铁路离开乌克兰，但现在不可能说这些机会是否或何时会被削减，因此，鼓励在乌克兰的丹麦人离开该国。”
 
-哎呀，我心真疼啊，我说“你怎么能看你爱的女人被别人绑架7、8年？你明知在哪儿？”我说这位战友，他是警察啊，他说“我是完全有能力救她的”，我不要说是你的爱，发小，如果你一生能有一次行动，帮助一个人，帮助正义，匡扶了正义，你就值得了，你比你几十年干一件事儿啊，不论你干啥事儿，最后就是土把你埋了啊，何况又是救人呢。你干嘛不干呢？（他说）“哎呀，我给家人都说过，家人这样那样，说我现在很好，干嘛惹这事儿呢？”
+目前，丹麦在乌克兰的大使馆仍然开放。
 
-这个中国人呐不怕惹事儿，天下没比中国人摊的事儿再多了，文化大革命到现在土改，啊，所谓怕事，怕他是中国人，还有比中国人摊事儿再多吗？这战友还说啊，“我就觉得我自己承受不了”，你没干过，你怎么就承受不了？
+周六，瑞典则发表了一份类似的声明，称所有公民应该尽快离开乌克兰，并建议不要前往该国“进行一切旅行”。
 
-天呐！这就是我们中国人的个性，已经完全被洗脑，泯灭了一切的勇气和良知，根本不敢面对任何伟大和新的文明和创造，所以中国有文明吗？中国有创造吗？你看看华人在海外啊，有点儿小事，有个小房子，就觉得我这样，就是我等到死了，能维持到死就不错了。但你看人家外国人伊隆马斯克，每个人啊，都在尝试着最新的东西，任何人在美国都在拼打着自己的世界，一生哪怕干一件伟大的，超越自己的，超越自己的懦弱啊，干一件丰富人生的事情都是值的。
+瑞典外交部长安·林德（Ann Linde）在一条推文中说：“由于乌克兰及其周边地区严重和不可预测的安全局势，外交部今天决定建议不要前往乌克兰，并敦促所有身在乌克兰的瑞典人离开该国。”
 
-所以我昨天闻风而动，我没回答完，有两句还得说：一个人，在做重大决定前，千万不要受任何人影响，就独立的，做出你的，人格上和人性上，内心觉得有意义，正确的啊，丰富你人生的决定。这就是跟随你自己的感觉，不要在乎任何人，越是旁边人说啥都不要听，就这么简单。另外一个大家要记住，只要你认为是自己是对的，不伤害别人的或者是能帮助别人的，没有任何事情不对的，自己决定，自己承担责任，凡事跟别人商量，受别人影响而做出的决定，还有特别中国人说的平衡，权衡利弊得失决定，没有一样好的。
+根据报道，周六上午，美国国务院发布了四级旅行警告，说美国将“在乌克兰利沃夫（Lviv）保持一个小规模的领事机构以处理紧急情况，但将无法提供护照、签证或常规领事服务。”
 
-你看那伊隆马斯克，你看看当年的牛叉的比尔盖茨，你看看那个混蛋的扎克伯格，哪个人做决定的时候都是被别人排斥的，家人绝对不同意的，都是一生中最伟大的决定。凡事权衡利弊的决定都是最坏的决定，所以要跟随内心，决定的时候跟随内心，不要受任何人影响。
+同样在周六，德国外交部长安娜莱娜·贝尔博克（Annalena Baerbock）也说：“我们将保持在基辅的大使馆开放，但将减少我们的外交人员。我们的顿涅茨克总领馆（Consulate General Donetsk）自2014年以来一直驻扎在第聂伯罗（Dnipro），目前正暂时迁往利沃夫（Lviv）。”
 
-哎呀，我得继续锻炼，今天还得做140个啊，这个这几天非常非常幸福，特别是被那些垃圾伪类们，啊形容特别开心啊。兄弟姐妹们，你觉得狮子会在乎猎狗，还有所谓那些啊，蚊子的想法吗？你觉得会在乎吗？啊，所以说看到了海外，我们华人整个社会，不是你自己要混入高层社会，你根本就不在高层社会那个勇气的标准上，你也没有具备那种任何在西方所谓高层社会被人认可的那个角度上，那个层次上，你混有啥用啊，你骗有啥用啊？只有新中国联邦人达到了与世界最高的人啊，PK，对战、共处、合作。
+周六同一天，欧盟理事会（The Council of the European Union）发布了一份声明，说：“鉴于目前（俄罗斯）对乌克兰的威胁，欧盟及其成员国正在协调其行动，我们的外交使团并没有关闭，仍然留在基辅（Kyiv）并继续运作，以支持欧盟公民并与乌克兰当局合作。考虑到安全情况，工作人员的存在和对欧盟公民的旅行建议正在进行必要的调整。”
 
-咱们新中国联邦现在干的事情，中国人有过吗？有过吗？你说七哥这被罚款啊，两次134个million,2.5亿，有过吗？是吧，所以说兄弟姐妹们不要着急，真的假不了，假的真不了，你要相信正义，一定会……如果你相信正义，正义一定会跟你站在一起，我永远的相信，真的假不了，假的真不，特别是我们经历了五年以后，战友们，把敌人的嚣张，把敌人带进我们的恐惧，把敌人所有藏在背后蓝金黄和他们想干掉咱，攻击咱们的，所有的他的办法，都变成咱们武器，特别是啊，让敌人嚣张到最后，最后一分钟，最后一秒钟啊，才是最好的赢家，我看过武侠，所有的小说，看过所有的最好的电影，看过美国最多的拳击擂台赛，都是最后的时候KO，我超级爽，而且我特别喜欢，就是强者弱者啊，坚持到最后的血汗淋漓的时候，击出了最后的致命一拳。
+声明指出：“我们重申，我们继续支持乌克兰的领土完整和主权，以及为缓和局势所做的外交努力。任何对乌克兰的进一步军事侵略都将带来巨大的后果和严重的代价。”
 
-我相信上天永远是站在勇者正义者的一边，所以共产党你完了啊，共产党你完了，共产党看看冬奥会吧，看看现在共产党吧，再他锁链的24年，任何有良知的，要把你妈，把你妹妹，把你家人锁24年链子，被任人欺辱，任人奸污人，你啥感觉？啊就这还唤不起人心吗？你还认不清共产党吗？所以说兄弟姐妹们，明天直播再见啊，啥都不说啦，明儿直播。
+**新闻来源**
 
-稿件仅作参考，最终以郭文贵先生盖特视频内容为准。
+[Sweden, Denmark urge citizens to leave Ukraine](https://thehill.com/policy/international/594007-sweden-denmark-urge-citizens-to-leave-ukraine)
 
-[郭文贵先生2022年2月12日盖特视频](https://gettr.com/post/pu2dte2ff8)
+[EU not closing diplomatic missions in Kyiv amid threat of Russian invasion](https://thehill.com/policy/international/594009-council-of-eu-says-diplomatic-missions-are-not-closing-in-kyiv-amid)
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
