--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,10 +1,10 @@
 ---
-title: 2月11日文贵大直播（图4-6
+title: 2月11日文贵大直播摘要（10-12
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1997410/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1997495/)
 
 设计 五月花农场 科存
-![](https://assets.gnews.org/wp-content/uploads/2022/02/565120C2-8750-401A-A2AB-5DA3E217FE90.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/19E0D25C-97CF-45FA-8BD4-45899720F52B.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/CE0BE7A7-07DB-4A5F-BBBC-1A25CB47035A.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/C47E6D54-DE55-4E7C-82C3-F5536A9AA3CD.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/8891A492-8B8C-435E-8B41-BA292C388613.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/6220868F-B86F-4CFA-9190-1874D79E22B4.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
