--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 2/12/2022 文贵盖特：回答战友关于如何做出人生重大决定的问题，除了看透生死、放下恐惧，还要独立判断、不受他人影响，只要是你内心觉得有意义的、正确的、不伤害别人或能帮助别人的都可以做
+title: 2/11/2022 文贵直播：战友们要捐钱给文贵的好意文贵心领了，但文贵从来不向任何人伸手要钱，也从不接受任何捐赠，所以战友们千万不要捐钱给文贵
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1997306/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1997352/)
 
 秘密翻译组-北美组
 
