--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,14 +1,12 @@
 ---
-title: 恐惧和冲动只会失去机会远离胜利
+title: 与感染者同居 有发热症状的密接者阳性率高
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1997228/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1997313/)
 
-作者:东京樱花团小视频组
-
-校对：东京樱花团/小视频组
-
-发布：东京樱花团/小视频组
-![喜马拉雅东京樱花团](https://assets.gnews.org/wp-content/uploads/2022/02/樱花-3-2.jpg)喜马拉雅东京樱花团
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2._13-1-scaled.jpg)
+*编辑：东京樱花团/简报小组
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
