--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,10 +1,10 @@
 ---
-title: 2月11日文贵大直播摘要（图1-3
+title: 2月11日文贵大直播（图4-6
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1997379/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1997410/)
 
 设计 五月花农场 科存
-![](https://assets.gnews.org/wp-content/uploads/2022/02/C99B3D97-0E56-4248-B3CC-B61D5D9B3F76.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/A2DA2FE1-842C-4656-BE0D-1D3622E9D549.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/0DED8955-59BF-41C7-9A4E-EE3575A3E72E.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/565120C2-8750-401A-A2AB-5DA3E217FE90.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/19E0D25C-97CF-45FA-8BD4-45899720F52B.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/CE0BE7A7-07DB-4A5F-BBBC-1A25CB47035A.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
