--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 2/11/2022 文贵直播: 中共大肆宣传谷爱凌意在利用冬奥会的所谓正能量掩盖锁链女事件
+title: 2/11/2022 文贵直播：文贵必将把单伟健和PAG的事情整明白，中共践踏国际规则，在西方的渗透、攻击和造假越多，中共下场越惨
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1997331/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1997396/)
 
 秘密翻译组-北美组
 
