--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,12 +1,10 @@
 ---
-title: 与感染者同居 有发热症状的密接者阳性率高
+title: 2/11/2022 文贵直播： 谷爱凌和谷燕给中国人拉仇恨，让亚裔跟全世界对立，掀起了排华浪潮
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1997313/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1997372/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2._13-1-scaled.jpg)
-*编辑：东京樱花团/简报小组
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+秘密翻译组-北美组
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
