--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,14 +1,10 @@
 ---
-title: 七哥去英国日本前必须要满足的几个条件
+title: 2/12/2022 文贵盖特：回答战友关于如何做出人生重大决定的问题，除了看透生死、放下恐惧，还要独立判断、不受他人影响，只要是你内心觉得有意义的、正确的、不伤害别人或能帮助别人的都可以做
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1997215/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1997306/)
 
-作者:东京樱花团小视频组
+秘密翻译组-北美组
 
-校对：东京樱花团/小视频组
-
-发布：东京樱花团/小视频组
-![喜马拉雅东京樱花团](https://assets.gnews.org/wp-content/uploads/2022/02/樱花-3-2.jpg)喜马拉雅东京樱花团
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
