--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,18 +1,29 @@
 ---
-title: 20220201大直播 冬奥会过后 丹麦 荷兰 芬兰 德国 俄罗斯等国会瞬间秒变
+title: Moderna首席执行官刚刚抛售了 4亿美元的股票并删除了他的推特账户
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1999592/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1999795/)
 
-作者：东京樱花团小视频组
+Baxter Dmitry
 
-校对：东京樱花团小视频组
+翻译：沉默老歌
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-51.png)图片来源：[https://newspunch.com](https://newspunch.com)
+在辉瑞承认安全审计可能会抹去数十亿美元的股票市场估值后几天，Moderna 首席执行官 Stéphane Bancel 抛售了数亿美元的股票并删除了他的 Twitter 账户。
 
-编辑发布：东京樱花团小视频组
+在一位前 Blackrock 高管开始调查保险公司和殡仪馆的死亡统计数据后不久，这位 Moderna 首席执行官的奇怪举动就出现了。
 
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花-3-1.jpg)
-喜马拉雅东京樱花团
+Edward Dowd 是前对冲基金经理，他开始研究保险公司和殡仪馆的死亡统计数据，他还开始指责辉瑞和 Moderna 在疫苗临床试验中存在欺诈行为。
 
+来源链接：[https://newspunch.com/moderna-ceo-just-dumped-400-million-in-stock-and-deleted-his-twitter-account/amp/](https://newspunch.com/moderna-ceo-just-dumped-400-million-in-stock-and-deleted-his-twitter-account/amp/)
+
+编辑：LILY
+
+发布：面包飞上天
+
+20220213
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/農場文宣-3-4.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
